Bug 102896 - localization check-ins for 8.7.0 (S40)
S40 update
ZimbraWebClient/WebRoot/messages/ZaMsg.properties:ERROR_INVALID_FILE_NAME  -- Bug 104236
ZimbraAdminExt/ClientUploader/js/com_zimbra_clientuploader.properties:Client_upload_failed -- Bug 104305

https://bugzilla.zimbra.com/show_bug.cgi?id=102896

Copied from Perforce
 Change: 568738

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -892,7 +892,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Aktiveret
 NAD_MTA_SMTP_Dns_Disabled = Deaktiveret
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Aktiv\u00e9r DNS-opslag
 NAD_MTA_ProtocolChecks = Protokoleftersyn
 NAD_MTA_reject_invalid_helo_hostname = V\u00e6rtsnavn i hilsen er i strid med RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Klient skal hilse med et fuldt kvalificeret v\u00e6rtsnavn (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = Indstillinger for mail
 NAD_MailOptionsStandardClient = Standardklient (HTML)
 NAD_ContactsOptions = Indstillinger for kontaktpersoner
 NAD_CalendarOptions = Indstillinger for kalender
-NAD_ChatOptions = Indstillinger for chat
 NAD_MailOptionsSending = Sending af mail
 NAD_MailOptionsReceiving = Modtagelse af mail
 NAD_MailOptionsComposing = Skrivning af mail
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = Generelle funktioner
 NAD_zimbraMailFeature = Mail-funktioner
 NAD_zimbraContactFeature = Kontaktfunktioner
 NAD_zimbraCalendarFeature = Kalenderfunktioner
-NAD_zimbraChatFeature = IM-funktioner
 NAD_zimbraSearchFeature = S\u00f8gefunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokumenter
 LBL_zimbraFeatureBriefcasesEnabled = Dokumentmappe
 LBL_zimbraFeatureHtmlComposeEnabled = HTML-skrivning
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = \u00d8jeblikkelige adviseringer
-LBL_zimbraPrefIMAutoLogin = Automatisk login p\u00e5 IM-tjenester
 NAD_Feature = Funktion: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visning af vedh\u00e6ftede filer som HTML
 LBL_zimbraFeatureGalEnabled = Adgang til global adresseliste
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Vis tidszoneliste i aftalevisning
 LBL_zimbraPrefImapSearchFoldersEnabled = Vis IMAP-s\u00f8gemapper
 LBL_zimbraPrefMailForwardingAddress = Brugerspecificerede videresendelsesadresser:
 LBL_zimbraPrefMailForwardingAddressMsg = Brugerspecificerede videresendelsesadresser
-LBL_zimbraPrefChatPlaySound = Afspil adviseringslyd
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Der skal mindst angives en videresendelsesadresse, n\u00e5r du v\u00e6lger ikke at beholde lokale kopier af meddelelser.
 
@@ -2679,3 +2673,4 @@ ERROR_RPNameCustomDisallowed = Navnet "{0}" er et reserveret navn for fastholdel
 ERROR_InvalidRPLifetime = Omr\u00e5det skal v\u00e6r et positivt heltal.
 ERROR_RPExists = Politik "{0}" findes allerede.
 multiple_servers = flere servere
+ERROR_INVALID_FILE_NAME = Ugyldigt filnavn. Brug knappen Gennemse til at v\u00e6lge en gyldig fil.
