--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Activ\u00e9
 NAD_MTA_SMTP_Dns_Disabled = D\u00e9sactiv\u00e9
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Activer la v\u00e9rification DNS\u00a0:
 NAD_MTA_ProtocolChecks = V\u00e9rifications de protocole
 NAD_MTA_reject_invalid_helo_hostname = Le nom d'h\u00f4te dans le message d'accueil ne respecte pas les RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Le client doit accueillir avec un nom d'h\u00f4te complet (reject_non_fqdn__helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Options de courriel
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Options de contacts
 NAD_CalendarOptions = Options de calendrier
-NAD_ChatOptions = Options de clavardage
 NAD_MailOptionsSending = Envoi de courriel
 NAD_MailOptionsReceiving = R\u00e9ception de courriel
 NAD_MailOptionsComposing = Cr\u00e9ation de courriel
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = Fonctions g\u00e9n\u00e9rales
 NAD_zimbraMailFeature = Fonctions de messagerie
 NAD_zimbraContactFeature = Fonctions des contacts
 NAD_zimbraCalendarFeature = Fonctions de calendrier
-NAD_zimbraChatFeature = Fonctions MI
 NAD_zimbraSearchFeature = Fonctions de recherche
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Porte-documents
 LBL_zimbraFeatureHtmlComposeEnabled = \u00c9criture en HTML
-LBL_zimbraFeatureChatEnabled = Clavardage
 LBL_zimbraFeatureInstantNotify = Notifications instantan\u00e9es
-LBL_zimbraPrefIMAutoLogin = Connexion automatique aux services de messagerie instantan\u00e9e
 NAD_Feature = Fonction\u00a0: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visualiser les pi\u00e8ces jointes en HTML\u00a0:
 LBL_zimbraFeatureGalEnabled = Acc\u00e8s \u00e0 la liste d\u2019adresses globale
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afficher la liste des fuseaux horaires
 LBL_zimbraPrefImapSearchFoldersEnabled = Afficher les dossiers de recherche IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresses de transfert saisies par l'utilisateur\u00a0:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresses de transfert saisies par l'utilisateur
-LBL_zimbraPrefChatPlaySound = \u00c9mettre un son pour les notifications
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Au moins une adresse de transfert doit \u00eatre pr\u00e9cis\u00e9e si vous choisissez de ne pas conserver des copies locales de vos messages.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = Le nom "{0}" est un nom de r\u00e8gle de conserva
 ERROR_InvalidRPLifetime = La plage doit \u00eatre un nombre entier positif.
 ERROR_RPExists = La r\u00e8gle "{0}" existe d\u00e9j\u00e0.
 multiple_servers = serveurs multiples
+ERROR_INVALID_FILE_NAME = Nom de fichier incorrect. Utilisez la touche de navigation pour s\u00e9lectionner un fichier valide.
