--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Enged\u00e9lyezve
 NAD_MTA_SMTP_Dns_Disabled = Letiltva
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS-c\u00edmkeres\u00e9sek enged\u00e9lyez\u00e9se
 NAD_MTA_ProtocolChecks = Protokoll-ellen\u0151rz\u00e9sek
 NAD_MTA_reject_invalid_helo_hostname = Az \u00fcdv\u00f6zl\u00e9sben l\u00e9v\u0151 \u00e1llom\u00e1sn\u00e9v nem felel meg az RFC szab\u00e1lyainak (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Az \u00fcgyf\u00e9lnek teljesen min\u0151s\u00edtett \u00e1llom\u00e1sn\u00e9vvel kell \u00fcdv\u00f6zl\u00e9st v\u00e9geznie (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Levelez\u00e9si be\u00e1ll\u00edt\u00e1sok
 NAD_MailOptionsStandardClient = Szabv\u00e1nyos (HTML) \u00fcgyf\u00e9l
 NAD_ContactsOptions = Partnerek opci\u00f3i
 NAD_CalendarOptions = Napt\u00e1r be\u00e1ll\u00edt\u00e1sai
-NAD_ChatOptions = Cseveg\u00e9si opci\u00f3k
 NAD_MailOptionsSending = Lev\u00e9lk\u00fcld\u00e9s
 NAD_MailOptionsReceiving = E-mail fogad\u00e1sa
 NAD_MailOptionsComposing = E-mail \u00edr\u00e1sa
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = \u00c1ltal\u00e1nos szolg\u00e1ltat\u00e1sok
 NAD_zimbraMailFeature = Levelez\u00e9si szolg\u00e1ltat\u00e1sok
 NAD_zimbraContactFeature = El\u00e9rhet\u0151s\u00e9gi funkci\u00f3k
 NAD_zimbraCalendarFeature = Napt\u00e1rszolg\u00e1ltat\u00e1sok
-NAD_zimbraChatFeature = Cseveg\u00e9si szolg\u00e1ltat\u00e1sok
 NAD_zimbraSearchFeature = Keres\u00e9si szolg\u00e1ltat\u00e1sok
 LBL_zimbraFeatureNotebookEnabled = Dokumentumok
 LBL_zimbraFeatureBriefcasesEnabled = T\u00e1ska
 LBL_zimbraFeatureHtmlComposeEnabled = HTML-\u00edr\u00e1s
-LBL_zimbraFeatureChatEnabled = Cseveg\u00e9s
 LBL_zimbraFeatureInstantNotify = Azonnali \u00e9rtes\u00edt\u00e9sek
-LBL_zimbraPrefIMAutoLogin = Automatikus bejelentkez\u00e9s az azonnali \u00fczenetk\u00fcld\u0151 szolg\u00e1ltat\u00e1sokba
 NAD_Feature = Szolg\u00e1ltat\u00e1s: 
 LBL_zimbraFeatureViewInHtmlEnabled = Mell\u00e9kletek megtekint\u00e9se HTML-k\u00e9nt
 LBL_zimbraFeatureGalEnabled = Hozz\u00e1f\u00e9r\u00e9s a glob\u00e1lis c\u00edmlist\u00e1hoz
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Id\u0151z\u00f3n\u00e1k list\u00e1j\u0
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP keres\u00e9si mapp\u00e1k megjelen\u00edt\u00e9se
 LBL_zimbraPrefMailForwardingAddress = Felhaszn\u00e1l\u00f3 \u00e1ltal megadott tov\u00e1bb\u00edt\u00e1si c\u00edmek:
 LBL_zimbraPrefMailForwardingAddressMsg = Felhaszn\u00e1l\u00f3 \u00e1ltal megadott tov\u00e1bb\u00edt\u00e1si c\u00edmek
-LBL_zimbraPrefChatPlaySound = \u00c9rtes\u00edt\u00e9si hang lej\u00e1tsz\u00e1sa
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Legal\u00e1bb egy tov\u00e1bb\u00edt\u00e1si c\u00edmet meg kell hat\u00e1rozni, amikor azt v\u00e1lasztja, hogy nem tartja meg az \u00fczenetek helyi m\u00e1solatait.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = A(z) \u201e{0}\u201d egy lefoglalt meg\u0151rz\u0
 ERROR_InvalidRPLifetime = Ennek a tartom\u00e1nynak pozit\u00edv eg\u00e9sz sz\u00e1mnak kell lennie.
 ERROR_RPExists = A(z) \u201e{0}\u201d h\u00e1zirend m\u00e1r l\u00e9tezik.
 multiple_servers = t\u00f6bb kiszolg\u00e1l\u00f3
+ERROR_INVALID_FILE_NAME = \u00c9rv\u00e9nytelen f\u00e1jln\u00e9v. A Tall\u00f3z\u00e1s gombbal v\u00e1lasszon ki egy \u00e9rv\u00e9nyes f\u00e1jlt.
