--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -917,11 +917,10 @@ NAD_MTA_RelayPort = Port MTA relai:
 NAD_MTA_MaxMsgSize = Ukuran pesan maksimal (KB):
 NAD_DOC_MaxUploadSize = Ukuran maksimal file yang diunggah dari desktop (KB):
 NAD_MTA_Options = Opsi:
-NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns = DNS SMTP:
 NAD_MTA_SMTP_Dns_Enabled = Diaktifkan
 NAD_MTA_SMTP_Dns_Disabled = Dinonaktifkan
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Aktifkan lookup DNS
 NAD_MTA_ProtocolChecks = Pemeriksaan protokol
 NAD_MTA_reject_invalid_helo_hostname = Nama host pada sapaan melanggar RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Klien harus menyapa dengan nama host yang benar-benar memenuhi syarat (reject_non_fqdn_helo_hostname)
@@ -1245,7 +1244,6 @@ NAD_MailOptions = Opsi Email
 NAD_MailOptionsStandardClient = Aplikasi (HTML) standar
 NAD_ContactsOptions = Opsi Kontak
 NAD_CalendarOptions = Opsi Kalender
-NAD_ChatOptions = Opsi Obrolan
 NAD_MailOptionsSending = Mengirim email
 NAD_MailOptionsReceiving = Menerima email
 NAD_MailOptionsComposing = Menulis email
@@ -1379,14 +1377,11 @@ NAD_zimbraGeneralFeature = Fitur Umum
 NAD_zimbraMailFeature = Fitur Email
 NAD_zimbraContactFeature = Fitur Kontak
 NAD_zimbraCalendarFeature = Fitur Kalender
-NAD_zimbraChatFeature = Fitur IM
 NAD_zimbraSearchFeature = Fitur Pencarian
 LBL_zimbraFeatureNotebookEnabled = Dokumen
 LBL_zimbraFeatureBriefcasesEnabled = Tas Kerja
 LBL_zimbraFeatureHtmlComposeEnabled = Tulis HTML
-LBL_zimbraFeatureChatEnabled = Obrolan
 LBL_zimbraFeatureInstantNotify = Notifikasi Instan
-LBL_zimbraPrefIMAutoLogin = Masuk ke layanan perpesanan instan secara otomatis
 NAD_Feature = Fitur: 
 LBL_zimbraFeatureViewInHtmlEnabled = Menampilkan lampiran sebagai HTML
 LBL_zimbraFeatureGalEnabled = Akses Daftar Alamat Global
@@ -1508,7 +1503,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Tampilkan daftar zona waktu dalam tamp
 LBL_zimbraPrefImapSearchFoldersEnabled = Tampilkan folder pencarian IMAP
 LBL_zimbraPrefMailForwardingAddress = Alamat penerusan yang ditentukan pengguna:
 LBL_zimbraPrefMailForwardingAddressMsg = Alamat penerusan yang ditentukan pengguna
-LBL_zimbraPrefChatPlaySound = Putar bunyi notifikasi
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Sedikitnya, satu alamat penerusan harus ditentukan ketika memilih untuk tidak menyimpan salinan pesan lokal.
 
@@ -2784,3 +2778,4 @@ ERROR_RPNameCustomDisallowed = Nama "{0}" adalah nama kebijakan retensi yang dic
 ERROR_InvalidRPLifetime = Rentang harus berupa bilangan bulat positif.
 ERROR_RPExists = Kebijakan "{0}" sudah ada.
 multiple_servers = beberapa server
+ERROR_INVALID_FILE_NAME = Nama file tidak valid. Gunakan tombol telusuri untuk memilih file yang valid.
