--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -573,7 +573,7 @@ Add_Fp_Title = Aggiungi principal esterno
 Enter_FpPrefix = Prefisso principal esterno:
 Select_Interop_Provider = Provider Interop libero/occupato:
 Enter_ForeignAccount = Indirizzo email principale esterno:
-DIRTY_SAVE_ACCT = L''account \u00e8 stato modificato. Salva le modifiche prima di proseguire.
+DIRTY_SAVE_ACCT = L\u2019account \u00e8 stato modificato. Salva le modifiche prima di proseguire.
 NAD_Exchange_Settings = Impostazioni Microsoft Exchange
 NAD_Exchange_URL = URL server Microsoft Exchange:
 NAD_Exchange_Auth_Schema = Schema di autorizzazione Microsoft Exchange:
@@ -888,11 +888,10 @@ NAD_MTA_RelayPort = Porta MTA di inoltro:
 NAD_MTA_MaxMsgSize = Dimensioni massime messaggio (KB):
 NAD_DOC_MaxUploadSize = Dimensioni massime di un file caricato dal desktop (KB):
 NAD_MTA_Options = Opzioni:
-NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns = DNS SMTP:
 NAD_MTA_SMTP_Dns_Enabled = Attivo
-NAD_MTA_SMTP_Dns_Disabled = Disattivato
+NAD_MTA_SMTP_Dns_Disabled = Disattivo
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Attiva lookup DNS
 NAD_MTA_ProtocolChecks = Controlli protocollo
 NAD_MTA_reject_invalid_helo_hostname = Il nome host nella presentazione v\u00ecola l'RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Il messaggio di presentazione del client deve contenere un nome host che lo qualifichi interamente (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = Opzioni Mail
 NAD_MailOptionsStandardClient = Client (HTML) standard
 NAD_ContactsOptions = Opzioni contatti
 NAD_CalendarOptions = Opzioni Agenda
-NAD_ChatOptions = Opzioni chat
 NAD_MailOptionsSending = Invio messaggi
 NAD_MailOptionsReceiving = Ricezione messaggi
 NAD_MailOptionsComposing = Composizione mail...
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = Funzioni generali
 NAD_zimbraMailFeature = Funzioni di posta
 NAD_zimbraContactFeature = Funzioni di contatto
 NAD_zimbraCalendarFeature = Funzioni dell'Agenda
-NAD_zimbraChatFeature = Funzioni IM
 NAD_zimbraSearchFeature = Funzioni di ricerca
 LBL_zimbraFeatureNotebookEnabled = Documenti
 LBL_zimbraFeatureBriefcasesEnabled = Valigetta
 LBL_zimbraFeatureHtmlComposeEnabled = Composizione HTML
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifiche istantanee
-LBL_zimbraPrefIMAutoLogin = Entra automaticamente nei servizi di messaggistica istantanea
 NAD_Feature = Funzione: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visualizzazione allegati come HTML
 LBL_zimbraFeatureGalEnabled = Accesso all'indirizzario globale GAL
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Visualizza l'elenco dei fusi orari nel
 LBL_zimbraPrefImapSearchFoldersEnabled = Mostra le cartelle di ricerca IMAP
 LBL_zimbraPrefMailForwardingAddress = Indirizzi di inoltro specificati dall'utente:
 LBL_zimbraPrefMailForwardingAddressMsg = Indirizzi di inoltro specificati dall'utente
-LBL_zimbraPrefChatPlaySound = Riproduci un suono di notifica
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Se scegli di non conservare copie locali dei messaggi devi specificare almeno un indirizzo di inoltro.
 
@@ -2168,8 +2162,8 @@ DLCreated = La lista di distribuzione {0} \u00e8 stata creata
 CosCreated = Il COS {0} \u00e8 stato creato
 ResourceCreated = La risorsa {0} \u00e8 stata creata
 DomainCreated = Il dominio {0} \u00e8 stato creato
-AccountModified = L''account {0} \u00e8 stato modificato
-AliasModified = L''alias {0} \u00e8 stato modificato
+AccountModified = L\u2019account {0} \u00e8 stato modificato
+AliasModified = L\u2019alias {0} \u00e8 stato modificato
 DLModified = La lista di distribuzione {0} \u00e8 stata modificata
 CosModified = Il COS {0} \u00e8 stato modificato
 ResourceModified = La risorsa {0} \u00e8 stata modificata
@@ -2679,3 +2673,4 @@ ERROR_RPNameCustomDisallowed = Il nome "{0}" \u00e8 un nome di criterio di conse
 ERROR_InvalidRPLifetime = L'intervallo deve essere indicato da un numero intero positivo.
 ERROR_RPExists = Il criterio "{0}" esiste gi\u00e0.
 multiple_servers = pi\u00f9 server
+ERROR_INVALID_FILE_NAME = Nome file non valido. Usa il pulsante Sfoglia per selezionare un file valido.
