--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = \u05de\u05d5\u05e4\u05e2\u05dc
 NAD_MTA_SMTP_Dns_Disabled = \u05de\u05d5\u05e9\u05d1\u05ea
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = \u05d4\u05e4\u05e2\u05dc \u05d7\u05d9\u05e4\u05d5\u05e9\u05d9 DNS\u200f
 NAD_MTA_ProtocolChecks = \u05d1\u05d3\u05d9\u05e7\u05d5\u05ea \u05e4\u05e8\u05d5\u05d8\u05d5\u05e7\u05d5\u05dc
 NAD_MTA_reject_invalid_helo_hostname = \u05e9\u05dd \u05de\u05d0\u05e8\u05d7 \u05d1\u05d1\u05e8\u05db\u05d4 \u05de\u05e4\u05e8 \u05d0\u05ea \u05d4-RFC (reject_invalid_helo_hostname)\u200e\u200f
 NAD_MTA_reject_non_fqdn_helo_hostname = \u05d4\u05dc\u05e7\u05d5\u05d7 \u05d7\u05d9\u05d9\u05d1 \u05dc\u05e9\u05dc\u05d5\u05d7 \u05d1\u05e8\u05db\u05d4 \u05e2\u05dd \u05e9\u05dd \u05de\u05d0\u05e8\u05d7 \u05de\u05dc\u05d0 (reject_non_fqdn_helo_hostname\u200f)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d3\u05d5\
 NAD_MailOptionsStandardClient = \u05dc\u05e7\u05d5\u05d7 \u05e8\u05d2\u05d9\u05dc (HTML\u200f)
 NAD_ContactsOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d0\u05e0\u05e9\u05d9 \u05e7\u05e9\u05e8
 NAD_CalendarOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05dc\u05d5\u05d7-\u05e9\u05e0\u05d4
-NAD_ChatOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05e6'\u05d0\u05d8
 NAD_MailOptionsSending = \u05e9\u05dc\u05d9\u05d7\u05ea \u05d3\u05d5\u05d0"\u05dc
 NAD_MailOptionsReceiving = \u05e7\u05d1\u05dc\u05ea \u05d3\u05d5\u05d0"\u05dc
 NAD_MailOptionsComposing = \u05d9\u05e6\u05d9\u05e8\u05ea \u05d3\u05d5\u05d0"\u05dc
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05db\u05dc\u05
 NAD_zimbraMailFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8
 NAD_zimbraContactFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d0\u05d9\u05e9 \u05e7\u05e9\u05e8
 NAD_zimbraCalendarFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05dc\u05d5\u05d7-\u05e9\u05e0\u05d4
-NAD_zimbraChatFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea IM
 NAD_zimbraSearchFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d7\u05d9\u05e4\u05d5\u05e9
 LBL_zimbraFeatureNotebookEnabled = \u05de\u05e1\u05de\u05db\u05d9\u05dd
 LBL_zimbraFeatureBriefcasesEnabled = \u05ea\u05d9\u05e7 \u05de\u05e1\u05de\u05db\u05d9\u05dd
 LBL_zimbraFeatureHtmlComposeEnabled = \u05e6\u05d5\u05e8 HTML\u200f
-LBL_zimbraFeatureChatEnabled = \u05e6'\u05d0\u05d8
 LBL_zimbraFeatureInstantNotify = \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
-LBL_zimbraPrefIMAutoLogin = \u05d4\u05d9\u05db\u05e0\u05e1 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e9\u05d9\u05e8\u05d5\u05ea\u05d9 \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
 NAD_Feature = \u05ea\u05db\u05d5\u05e0\u05d4: 
 LBL_zimbraFeatureViewInHtmlEnabled = \u05d4\u05e6\u05d2\u05ea \u05e7\u05d1\u05e6\u05d9\u05dd \u05de\u05e6\u05d5\u05e8\u05e4\u05d9\u05dd \u05d1\u05ea\u05d5\u05e8 HTML\u200f
 LBL_zimbraFeatureGalEnabled = \u05d2\u05d9\u05e9\u05d4 \u05dc\u05e8\u05e9\u05d9\u05de\u05ea \u05db\u05ea\u05d5\u05d1\u05d5\u05ea \u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05ea
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u05d4\u05e6\u05d2 \u05e8\u05e9\u05d9\
 LBL_zimbraPrefImapSearchFoldersEnabled = \u05d4\u05e6\u05d2 \u05ea\u05d9\u05e7\u05d9\u05d5\u05ea \u05d7\u05d9\u05e4\u05d5\u05e9 IMAP\u200f
 LBL_zimbraPrefMailForwardingAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u2013 \u05d1\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05de\u05e9\u05ea\u05de\u05e9:
 LBL_zimbraPrefMailForwardingAddressMsg = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u2013 \u05d1\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05de\u05e9\u05ea\u05de\u05e9
-LBL_zimbraPrefChatPlaySound = \u05d4\u05e9\u05de\u05e2 \u05e6\u05dc\u05d9\u05dc \u05d4\u05d5\u05d3\u05e2\u05d4
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u05d9\u05e9 \u05dc\u05e6\u05d9\u05d9\u05df \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u05d0\u05d7\u05ea \u05dc\u05e4\u05d7\u05d5\u05ea \u05d1\u05e2\u05ea \u05d1\u05d7\u05d9\u05e8\u05d4 \u05e9\u05dc\u05d0 \u05dc\u05e9\u05de\u05d5\u05e8 \u05d4\u05e2\u05ea\u05e7\u05d9\u05dd \u05de\u05e7\u05d5\u05de\u05d9\u05d9\u05dd \u05e9\u05dc \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = \u05d4\u05e9\u05dd "{0}" \u05d4\u05d5\u05d0 \u05e
 ERROR_InvalidRPLifetime = \u05d4\u05d8\u05d5\u05d5\u05d7 \u05d7\u05d9\u05d9\u05d1 \u05dc\u05d4\u05d9\u05d5\u05ea \u05de\u05e1\u05e4\u05e8 \u05e9\u05dc\u05dd \u05d7\u05d9\u05d5\u05d1\u05d9.
 ERROR_RPExists = \u05d4\u05de\u05d3\u05d9\u05e0\u05d9\u05d5\u05ea "{0}" \u05db\u05d1\u05e8 \u05e7\u05d9\u05d9\u05de\u05ea.
 multiple_servers = \u05e9\u05e8\u05ea\u05d9\u05dd \u05de\u05e8\u05d5\u05d1\u05d9\u05dd.
+ERROR_INVALID_FILE_NAME = \u05e9\u05dd \u05e7\u05d5\u05d1\u05e5 \u05dc\u05d0 \u05d7\u05d5\u05e7\u05d9. \u05d4\u05e9\u05ea\u05de\u05e9 \u05d1\u05dc\u05d7\u05e6\u05df '\u05e2\u05d9\u05d5\u05df' \u05db\u05d3\u05d9 \u05dc\u05d1\u05d7\u05d5\u05e8 \u05e7\u05d5\u05d1\u05e5 \u05d7\u05d5\u05e7\u05d9.
