--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -900,7 +900,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = \uc0ac\uc6a9
 NAD_MTA_SMTP_Dns_Disabled = \uc0ac\uc6a9 \uc548 \ud568
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS \uc870\ud68c \uc0ac\uc6a9
 NAD_MTA_ProtocolChecks = \ud504\ub85c\ud1a0\ucf5c \uac80\uc0ac
 NAD_MTA_reject_invalid_helo_hostname = \uc778\uc0ac\ub9d0\uc5d0 \uc788\ub294 \ud638\uc2a4\ud2b8 \uc774\ub984\uc774 RFC\ub97c \uc704\ubc18\ud569\ub2c8\ub2e4(reject_invalid_helo_hostname).
 NAD_MTA_reject_non_fqdn_helo_hostname = \ud074\ub77c\uc774\uc5b8\ud2b8\ub294 \uc815\uaddc\ud654\ub41c \ud638\uc2a4\ud2b8 \uc774\ub984\uc73c\ub85c \uc778\uc0ac\ud574\uc57c \ud569\ub2c8\ub2e4(reject_non_fqdn_helo_hostname).
@@ -1223,7 +1222,6 @@ NAD_MailOptions = \uba54\uc77c \uc635\uc158
 NAD_MailOptionsStandardClient = \uc77c\ubc18(HTML) \ud074\ub77c\uc774\uc5b8\ud2b8
 NAD_ContactsOptions = \uc5f0\ub77d\ucc98 \uc635\uc158
 NAD_CalendarOptions = \uc77c\uc815\uad00\ub9ac \uc635\uc158
-NAD_ChatOptions = \ucc44\ud305 \uc635\uc158
 NAD_MailOptionsSending = \uba54\uc77c \ubcf4\ub0b4\uae30
 NAD_MailOptionsReceiving = \uba54\uc77c \ubc1b\uae30
 NAD_MailOptionsComposing = \uba54\uc77c \uc4f0\uae30
@@ -1357,14 +1355,11 @@ NAD_zimbraGeneralFeature = \uc77c\ubc18 \uae30\ub2a5
 NAD_zimbraMailFeature = \uba54\uc77c \uae30\ub2a5
 NAD_zimbraContactFeature = \uc5f0\ub77d\ucc98 \uae30\ub2a5
 NAD_zimbraCalendarFeature = \uc77c\uc815\uad00\ub9ac \uae30\ub2a5
-NAD_zimbraChatFeature = \uba54\uc2e0\uc800 \ub300\ud654 \uae30\ub2a5
 NAD_zimbraSearchFeature = \uac80\uc0c9 \uae30\ub2a5
 LBL_zimbraFeatureNotebookEnabled = \ubb38\uc11c
 LBL_zimbraFeatureBriefcasesEnabled = \ud30c\uc77c\ud3f4\ub354
 LBL_zimbraFeatureHtmlComposeEnabled = HTML \uc791\uc131
-LBL_zimbraFeatureChatEnabled = \ucc44\ud305
 LBL_zimbraFeatureInstantNotify = \uc989\uc2dc \uc54c\ub9bc
-LBL_zimbraPrefIMAutoLogin = \uba54\uc2e0\uc800 \uc11c\ube44\uc2a4\uc5d0 \uc790\ub3d9\uc73c\ub85c \ub85c\uadf8\uc778
 NAD_Feature = \uae30\ub2a5: 
 LBL_zimbraFeatureViewInHtmlEnabled = \ucca8\ubd80 \ud30c\uc77c\uc744 HTML\ub85c \ubcf4\uae30
 LBL_zimbraFeatureGalEnabled = \uc804\uccb4 \uc8fc\uc18c \ubaa9\ub85d \uc561\uc138\uc2a4
@@ -1486,7 +1481,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \uc57d\uc18d \ubcf4\uae30\uc5d0 \uc2dc
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP \uac80\uc0c9 \ud3f4\ub354 \ud45c\uc2dc
 LBL_zimbraPrefMailForwardingAddress = \uc0ac\uc6a9\uc790\uac00 \uc9c0\uc815\ud55c \uc804\ub2ec \uc8fc\uc18c:
 LBL_zimbraPrefMailForwardingAddressMsg = \uc0ac\uc6a9\uc790\uac00 \uc9c0\uc815\ud55c \uc804\ub2ec \uc8fc\uc18c
-LBL_zimbraPrefChatPlaySound = \uc54c\ub9bc \uc18c\ub9ac \uc7ac\uc0dd
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \uba54\uc2dc\uc9c0\uc758 \ub85c\uceec \uc0ac\ubcf8\uc744 \ubcf4\uad00\ud558\uc9c0 \uc54a\uae30\ub85c \uc120\ud0dd\ud560 \ub54c \ucd5c\uc18c\ud55c \ud558\ub098\uc758 \uc804\ub2ec \uc8fc\uc18c\ub97c \uc9c0\uc815\ud574\uc57c \ud569\ub2c8\ub2e4.
 
@@ -2722,3 +2716,4 @@ ERROR_RPNameCustomDisallowed = "{0}" \uc774\ub984\uc740 \uc608\uc57d\ub41c \ubcf
 ERROR_InvalidRPLifetime = \ubc94\uc704\ub294 \uc591\uc758 \uc815\uc218\uc5ec\uc57c \ud569\ub2c8\ub2e4.
 ERROR_RPExists = "{0}" \uc815\ucc45\uc740 \uc774\ubbf8 \uc788\uc2b5\ub2c8\ub2e4.
 multiple_servers = \uc5ec\ub7ec \uc11c\ubc84
+ERROR_INVALID_FILE_NAME = \ud30c\uc77c \uc774\ub984\uc774 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. \ucc3e\uc544\ubcf4\uae30 \ubc84\ud2bc\uc744 \uc0ac\uc6a9\ud558\uc5ec \uc62c\ubc14\ub978 \ud30c\uc77c\uc744 \uc120\ud0dd\ud558\uc138\uc694.
