--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Didayakan
 NAD_MTA_SMTP_Dns_Disabled = Dinyahdayakan
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Dayakan pencarian DNS
 NAD_MTA_ProtocolChecks = Semakan protokol
 NAD_MTA_reject_invalid_helo_hostname = Nama hos dalam sapaan melanggar RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Pelanggan mesti menyapa dengan nama hos yang layak sepenuhnya (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Opsyen Mel
 NAD_MailOptionsStandardClient = Pelanggan Standard (HTML)
 NAD_ContactsOptions = Opsyen Kenalan
 NAD_CalendarOptions = Opsyen Kalendar
-NAD_ChatOptions = Pilihan Sembang
 NAD_MailOptionsSending = Menghantar mel
 NAD_MailOptionsReceiving = Menerima mel
 NAD_MailOptionsComposing = Mengarang mel
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = Ciri Umum
 NAD_zimbraMailFeature = Ciri Mel
 NAD_zimbraContactFeature = Ciri-ciri Kenalan
 NAD_zimbraCalendarFeature = Ciri Kalendar
-NAD_zimbraChatFeature = Ciri IM
 NAD_zimbraSearchFeature = Ciri Gelintaran
 LBL_zimbraFeatureNotebookEnabled = Dokumen
 LBL_zimbraFeatureBriefcasesEnabled = Beg Bimbit
 LBL_zimbraFeatureHtmlComposeEnabled = Karang HTML
-LBL_zimbraFeatureChatEnabled = Sembang
 LBL_zimbraFeatureInstantNotify = Pemberitahuan Segera
-LBL_zimbraPrefIMAutoLogin = Log masuk secara automatik ke perkhidmatan pemesejan segera
 NAD_Feature = Ciri: 
 LBL_zimbraFeatureViewInHtmlEnabled = Melihat lampiran sebagai HTML
 LBL_zimbraFeatureGalEnabled = Capaian Senarai Alamat Global
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Tunjuk senarai zon waktu dalam pandang
 LBL_zimbraPrefImapSearchFoldersEnabled = Tunjuk folder gelintaran IMAP
 LBL_zimbraPrefMailForwardingAddress = Alamat pemajuan ditentukan pengguna:
 LBL_zimbraPrefMailForwardingAddressMsg = Alamat pemajuan ditentukan pengguna
-LBL_zimbraPrefChatPlaySound = Mainkan bunyi pemberitahuan
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Sekurang-kurangnya satu alamat dimajukan mesti ditentukan apabila memilih tidak menyimpan salinan setempat mesej.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = Nama "{0}" ialah nama polisi pengekalan simpanan.
 ERROR_InvalidRPLifetime = Julat mestilah integer positif.
 ERROR_RPExists = Polisi "{0}" sudah wujud.
 multiple_servers = berbilang pelayan
+ERROR_INVALID_FILE_NAME = Nama fail tidak sah. Gunakan butang pelayar untuk memilih fail yang sah.
