--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -892,7 +892,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Ingeschakeld
 NAD_MTA_SMTP_Dns_Disabled = Uitgeschakeld
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS-opzoeken inschakelen
 NAD_MTA_ProtocolChecks = Protocolcontroles
 NAD_MTA_reject_invalid_helo_hostname = Hostnaam in begroeting is in conflict met RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Client moet begroeten met een volledig correcte hostnaam (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = E-mailopties
 NAD_MailOptionsStandardClient = Standaard-client (HTML)
 NAD_ContactsOptions = Contactopties
 NAD_CalendarOptions = Agendaopties
-NAD_ChatOptions = Chatopties
 NAD_MailOptionsSending = E-mail verzenden
 NAD_MailOptionsReceiving = E-mail ontvangen
 NAD_MailOptionsComposing = E-mail opstellen
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = Algemene functies
 NAD_zimbraMailFeature = E-mailfuncties
 NAD_zimbraContactFeature = Contactfuncties
 NAD_zimbraCalendarFeature = Agendafuncties
-NAD_zimbraChatFeature = IM-functies
 NAD_zimbraSearchFeature = Zoekfuncties
 LBL_zimbraFeatureNotebookEnabled = Documenten
 LBL_zimbraFeatureBriefcasesEnabled = Aktetas
 LBL_zimbraFeatureHtmlComposeEnabled = Opstellen in HTML
-LBL_zimbraFeatureChatEnabled = Chatten
 LBL_zimbraFeatureInstantNotify = Onmiddelijke kennisgeveningen
-LBL_zimbraPrefIMAutoLogin = Automatisch inloggen op IM-services
 NAD_Feature = Functie: 
 LBL_zimbraFeatureViewInHtmlEnabled = Bijlagen als HTML weergegeven
 LBL_zimbraFeatureGalEnabled = Toegang tot Alg. adreslijst
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Lijst met tijdzones in afsprakenweerga
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP-zoekmappen weergeven
 LBL_zimbraPrefMailForwardingAddress = Door gebruiker opgegeven doorstuuradressen:
 LBL_zimbraPrefMailForwardingAddressMsg = Door gebruiker opgegeven doorstuuradressen
-LBL_zimbraPrefChatPlaySound = Meldingsgeluid afspelen
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Er moet minimaal \u00e9\u00e9n doorstuuradres worden opgegeven als je ervoor kiest geen lokale kopie\u00ebn van berichten te bewaren.
 
@@ -2679,3 +2673,4 @@ ERROR_RPNameCustomDisallowed = De naam "{0}" is een gereserveerde bewaarbeleidna
 ERROR_InvalidRPLifetime = Het bereik moet een positief geheel getal zijn.
 ERROR_RPExists = Beleid "{0}" bestaat al.
 multiple_servers = meerdere servers
+ERROR_INVALID_FILE_NAME = Ongeldige bestandsnaam. Gebruik de bladerknop om een geldig bestand te selecteren.
