--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -767,7 +767,7 @@ PQV_CorruptQ_col = B\u0142\u0105d
 PQV_HoldQ_col = Wstrzymane
 PQV_IncomingQ_col = Przychodz\u0105ce
 PQV_ActiveQ_col = Aktywne
-PQV_DeferredQ_col = Usuni\u0119te
+PQV_DeferredQ_col = Od\u0142o\u017cone
 PQV_Tab_CorruptQ = B\u0142\u0105d
 PQV_Tab_HoldQ = Wstrzymane
 PQV_Tab_IncomingQ = Przychodz\u0105ce
@@ -908,11 +908,10 @@ NAD_MTA_RelayPort = Port MTA:
 NAD_MTA_MaxMsgSize = Maksymalny rozmiar wiadomo\u015bci (KB):
 NAD_DOC_MaxUploadSize = Maksymalny rozmiar pliku przes\u0142anego z\u00a0komputera (KB):
 NAD_MTA_Options = Ustawienia:
-NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = W\u0142\u0105czona
-NAD_MTA_SMTP_Dns_Disabled = Wy\u0142\u0105czone
+NAD_MTA_SMTP_Dns = DNS SMTP:
+NAD_MTA_SMTP_Dns_Enabled = W\u0142\u0105czony
+NAD_MTA_SMTP_Dns_Disabled = Wy\u0142\u0105czony
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = W\u0142\u0105cz wyszukiwanie DNS
 NAD_MTA_ProtocolChecks = Kontrole protoko\u0142u
 NAD_MTA_reject_invalid_helo_hostname = Nazwa serwera przy powitaniu narusza RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Klient musi zosta\u0107 przywitany w pe\u0142ni kwalifikowan\u0105 nazw\u0105 serwera (reject_non_fqdn_helo_hostname)
@@ -1235,7 +1234,6 @@ NAD_MailOptions = Ustawienia Poczty
 NAD_MailOptionsStandardClient = Klient standardowy (HTML)
 NAD_ContactsOptions = Opcje kontakt\u00f3w
 NAD_CalendarOptions = Ustawienia kalendarza
-NAD_ChatOptions = Opcje czatu
 NAD_MailOptionsSending = Wysy\u0142anie poczty
 NAD_MailOptionsReceiving = Odbieranie poczty
 NAD_MailOptionsComposing = Tworzenie poczty
@@ -1369,14 +1367,11 @@ NAD_zimbraGeneralFeature = Funkcje og\u00f3lne
 NAD_zimbraMailFeature = Funkcje poczty
 NAD_zimbraContactFeature = Funkcje kontakt\u00f3w
 NAD_zimbraCalendarFeature = Funkcje kalendarza
-NAD_zimbraChatFeature = Funkcje komunikatora
 NAD_zimbraSearchFeature = Funkcje wyszukiwania
 LBL_zimbraFeatureNotebookEnabled = Dokumenty
 LBL_zimbraFeatureBriefcasesEnabled = Akt\u00f3wka
 LBL_zimbraFeatureHtmlComposeEnabled = Tw\u00f3rz HTML
-LBL_zimbraFeatureChatEnabled = Czat
 LBL_zimbraFeatureInstantNotify = Powiadomienia w wiadomo\u015bciach b\u0142yskawicznych
-LBL_zimbraPrefIMAutoLogin = Automatycznie zaloguj w us\u0142ugach komunikatora internetowego
 NAD_Feature = Funkcja: 
 LBL_zimbraFeatureViewInHtmlEnabled = Przegl\u0105danie za\u0142\u0105cznik\u00f3w jako HTML
 LBL_zimbraFeatureGalEnabled = Dost\u0119p do globalnej listy adresowej
@@ -1498,7 +1493,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Poka\u017c list\u0119 stref czasowych 
 LBL_zimbraPrefImapSearchFoldersEnabled = Poka\u017c foldery wyszukiwania IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresy przekazywania okre\u015blone przez u\u017cytkownika:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresy przekazywania okre\u015blone przez u\u017cytkownika
-LBL_zimbraPrefChatPlaySound = Odtwarzaj d\u017awi\u0119k powiadomienia
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Je\u015bli nie maj\u0105 by\u0107 zachowywane lokalne kopie wiadomo\u015bci, nale\u017cy okre\u015bli\u0107 co najmniej jeden adres przekazywania.
 
@@ -2768,3 +2762,4 @@ ERROR_RPNameCustomDisallowed = Nazwa "{0}" jest zarezerwowan\u0105 nazw\u0105 za
 ERROR_InvalidRPLifetime = Przedzia\u0142 musi stanowi\u0107 dodatni\u0105 liczb\u0119 rzeczywist\u0105.
 ERROR_RPExists = Zasada "{0}" ju\u017c istnieje.
 multiple_servers = grupy serwer\u00f3w
+ERROR_INVALID_FILE_NAME = Nieprawid\u0142owa nazwa pliku. U\u017cyj przycisku Przegl\u0105daj, aby wybra\u0107 poprawny plik.
