--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -915,11 +915,10 @@ NAD_MTA_RelayPort = Porta do MTA de transfer\u00eancia:
 NAD_MTA_MaxMsgSize = Tamanho m\u00e1ximo da mensagem (KB):
 NAD_DOC_MaxUploadSize = Tamanho m\u00e1ximo de um ficheiro carregado a partir do computador (kB):
 NAD_MTA_Options = Op\u00e7\u00f5es:
-NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = Ativado
-NAD_MTA_SMTP_Dns_Disabled = Desativado
+NAD_MTA_SMTP_Dns = DNS do SMTP:
+NAD_MTA_SMTP_Dns_Enabled = Activado
+NAD_MTA_SMTP_Dns_Disabled = Desactivado
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Ativar consultas ao DNS
 NAD_MTA_ProtocolChecks = Verifica\u00e7\u00f5es do protocolo
 NAD_MTA_reject_invalid_helo_hostname = O par\u00e2metro hostname na sauda\u00e7\u00e3o viola a RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = A sauda\u00e7\u00e3o do cliente precisa apresentar um hostname totalmente qualificado (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Op\u00e7\u00f5es de e-mail
 NAD_MailOptionsStandardClient = Cliente padr\u00e3o (HTML)
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contactos
 NAD_CalendarOptions = Op\u00e7\u00f5es da agenda
-NAD_ChatOptions = Op\u00e7\u00f5es de chat
 NAD_MailOptionsSending = Enviando e-mail
 NAD_MailOptionsReceiving = Recebendo e-mail
 NAD_MailOptionsComposing = Compondo e-mail
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = Recursos gerais
 NAD_zimbraMailFeature = Recursos de e-mail
 NAD_zimbraContactFeature = Funcionalidades de contacto
 NAD_zimbraCalendarFeature = Recursos de agenda
-NAD_zimbraChatFeature = Funcionalidades de MI
 NAD_zimbraSearchFeature = Recursos de pesquisa
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-ficheiros
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
-LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso:
 LBL_zimbraFeatureViewInHtmlEnabled = Visualizando anexos como HTML
 LBL_zimbraFeatureGalEnabled = Acesso \u00e0 Lista de endere\u00e7os globais
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Exibir a lista de fusos hor\u00e1rios 
 LBL_zimbraPrefImapSearchFoldersEnabled = Exibir as pastas da pesquisa IMAP
 LBL_zimbraPrefMailForwardingAddress = Endere\u00e7os de encaminhamento especificados pelo utilizador:
 LBL_zimbraPrefMailForwardingAddressMsg = Endere\u00e7os de encaminhamento especificados pelo utilizador
-LBL_zimbraPrefChatPlaySound = Reproduzir som de notifica\u00e7\u00e3o
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u00c9 necess\u00e1rio especificar pelo menos um endere\u00e7o de reencaminhamento ao optar por n\u00e3o guardar c\u00f3pias locais das mensagens.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = O nome "{0}" \u00e9 um nome de pol\u00edtica de r
 ERROR_InvalidRPLifetime = O intervalo tem de ser um n\u00famero inteiro positivo.
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
+ERROR_INVALID_FILE_NAME = Nome de ficheiro inv\u00e1lido. Utilize o bot\u00e3o Procurar para selecionar um ficheiro v\u00e1lido.
