--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Activat
 NAD_MTA_SMTP_Dns_Disabled = Dezactivat
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Activare c\u0103ut\u0103ri DNS
 NAD_MTA_ProtocolChecks = Verific\u0103ri de protocol
 NAD_MTA_reject_invalid_helo_hostname = Numele gazdei din salut \u00eencalc\u0103 RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Clientul trebuie salutat cu un nume de gazd\u0103 complet calificat (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Op\u0163iuni pentru mesaje
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Op\u0163iuni pentru contacte
 NAD_CalendarOptions = Op\u0163iuni calendar
-NAD_ChatOptions = Op\u021biuni discu\u021bii
 NAD_MailOptionsSending = Trimitere mesaje
 NAD_MailOptionsReceiving = Primire mesaje
 NAD_MailOptionsComposing = Compunere mesaje
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = Caracteristici generale
 NAD_zimbraMailFeature = Caracteristici Mail
 NAD_zimbraContactFeature = Caracteristici contact
 NAD_zimbraCalendarFeature = Caracteristici calendar
-NAD_zimbraChatFeature = Caracteristici MI
 NAD_zimbraSearchFeature = Caracteristicile c\u0103utare
 LBL_zimbraFeatureNotebookEnabled = Documente
 LBL_zimbraFeatureBriefcasesEnabled = Serviet\u0103
 LBL_zimbraFeatureHtmlComposeEnabled = Alc\u0103tuire \u00een HTML
-LBL_zimbraFeatureChatEnabled = Discu\u021bie
 LBL_zimbraFeatureInstantNotify = Notific\u0103ri instantanee
-LBL_zimbraPrefIMAutoLogin = Autentificare automat\u0103 la serviciile de mesagerie instantanee
 NAD_Feature = Caracteristic\u0103: 
 LBL_zimbraFeatureViewInHtmlEnabled = Afi\u015fare fi\u015fiere ata\u015fate \u00een HTML
 LBL_zimbraFeatureGalEnabled = Acces la lista global\u0103 de adrese
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afi\u015fare list\u0103 fusuri orare \
 LBL_zimbraPrefImapSearchFoldersEnabled = Afi\u015fare foldere de c\u0103utare IMAP
 LBL_zimbraPrefMailForwardingAddress = Adrese de redirec\u0163ionare specificate de utilizator:
 LBL_zimbraPrefMailForwardingAddressMsg = Adrese de redirec\u0163ionare specificate de utilizator
-LBL_zimbraPrefChatPlaySound = Redare sunet de notificare
 
 ERROR_missing_zimbraPrefMailForwardingAddress = C\u00e2nd opta\u0163i s\u0103 nu p\u0103stra\u0163i o copie local\u0103 a mesajelor este necesar s\u0103 specifica\u0163i cel pu\u0163in o adres\u0103 pentru redirec\u0163ionare.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = Numele \u201e{0}\u201d este un nume rezervat poli
 ERROR_InvalidRPLifetime = Intervalul trebuie s\u0103 fie un num\u0103r \u00eentreg pozitiv.
 ERROR_RPExists = Politica \u201e{0}\u201d exist\u0103 deja.
 multiple_servers = servere multiple
+ERROR_INVALID_FILE_NAME = Nume de fi\u015fier nevalabil. Utiliza\u0163i butonul de r\u0103sfoire pentru a selecta un fi\u015fier valabil.
