--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -919,7 +919,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Omogo\u010deno
 NAD_MTA_SMTP_Dns_Disabled = Onemogo\u010deno
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Omogo\u010di DNS iskanja
 NAD_MTA_ProtocolChecks = Preverjanja protokola
 NAD_MTA_reject_invalid_helo_hostname = Ime gostitelja v pozdravu kr\u0161i RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Odjemalec mora pozdraviti s popolnoma dolo\u010denim imenom gostitelja (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = Po\u0161tne mo\u017enosti
 NAD_MailOptionsStandardClient = Standardni (HTML) odjemalec
 NAD_ContactsOptions = Mo\u017enosti stikov
 NAD_CalendarOptions = Mo\u017enosti za koledar
-NAD_ChatOptions = Mo\u017enosti za klepet
 NAD_MailOptionsSending = Po\u0161iljanje po\u0161te
 NAD_MailOptionsReceiving = Prejemanje po\u0161te
 NAD_MailOptionsComposing = Sestavljanje sporo\u010dil
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = Splo\u0161ne funkcije
 NAD_zimbraMailFeature = Funkcije po\u0161te
 NAD_zimbraContactFeature = Funkcije za stik
 NAD_zimbraCalendarFeature = Funkcije koledarja
-NAD_zimbraChatFeature = IM funkcije
 NAD_zimbraSearchFeature = Funkcije iskanja
 LBL_zimbraFeatureNotebookEnabled = Dokumenti
 LBL_zimbraFeatureBriefcasesEnabled = Aktovka
 LBL_zimbraFeatureHtmlComposeEnabled = HTML sestavi
-LBL_zimbraFeatureChatEnabled = Klepet
 LBL_zimbraFeatureInstantNotify = Neposredna obvestila
-LBL_zimbraPrefIMAutoLogin = Samodejno se prijavi v storitve za neposredno sporo\u010danje
 NAD_Feature = Funkcija: 
 LBL_zimbraFeatureViewInHtmlEnabled = Ogled prilog v obliki HTML
 LBL_zimbraFeatureGalEnabled = Dostop do globalnega seznama naslovov
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Poka\u017ei seznam \u010dasovnih pasov
 LBL_zimbraPrefImapSearchFoldersEnabled = Poka\u017ei IMAP iskalne mape
 LBL_zimbraPrefMailForwardingAddress = Naslovi za posredovanje, ki jih dolo\u010di uporabnik:
 LBL_zimbraPrefMailForwardingAddressMsg = Naslovi za posredovanje, ki jih dolo\u010di uporabnik
-LBL_zimbraPrefChatPlaySound = Zvok, ki naznanja predvajanje
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Kadar izberete, da ne boste obdr\u017eali lokalnih kopij sporo\u010dil, mora biti izbran vsaj en naslov za posredovanje.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = Ime "{0}" je rezervirano ime pravilnika o ohranit
 ERROR_InvalidRPLifetime = Razpon mora biti pozitivno celo \u0161tevilo.
 ERROR_RPExists = Pravilnik "{0}"  \u017ee obstaja.
 multiple_servers = ve\u010d stre\u017enikov
+ERROR_INVALID_FILE_NAME = Neveljavno ime datoteke. Uporabite gumb brskalnika za izbiro veljavne datoteke.
