--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -37,7 +37,7 @@ label_prompt = Bilgi \u0130ste
 
 label_fontFamily_SansSerif = Sans Serif
 label_fontFamily_Serif = Serif
-label_fontFamily_Wide = Geni\u015f
+label_fontFamily_Wide = Wide
 label_fontFamily_WideBlock = Wide Block
 label_fontFamily_Monospaced = Monospaced
 label_fontFamily_Comic = Comic
@@ -915,9 +915,8 @@ NAD_DOC_MaxUploadSize = Masa\u00fcst\u00fcnden y\u00fcklenen bir dosya i\u00e7in
 NAD_MTA_Options = Se\u00e7enekler:
 NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Etkinle\u015ftirildi
-NAD_MTA_SMTP_Dns_Disabled = Devre d\u0131\u015f\u0131
+NAD_MTA_SMTP_Dns_Disabled = Devre D\u0131\u015f\u0131 B\u0131rak\u0131ld\u0131
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS aramalar\u0131n\u0131 etkinle\u015ftir
 NAD_MTA_ProtocolChecks = Protokol denetimleri
 NAD_MTA_reject_invalid_helo_hostname = Kar\u015f\u0131lamadaki anasistem ad\u0131 RFC'yi ihlal ediyor (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u0130stemci tam nitelenmi\u015f anasistem ad\u0131yla kar\u015f\u0131lamal\u0131d\u0131r (reject_non_fqdn_helo_hostname)
@@ -1240,7 +1239,6 @@ NAD_MailOptions = Posta Se\u00e7enekleri
 NAD_MailOptionsStandardClient = Standart (HTML) istemcisi
 NAD_ContactsOptions = Ki\u015fi Se\u00e7enekleri
 NAD_CalendarOptions = Takvim Se\u00e7enekleri
-NAD_ChatOptions = Sohbet Se\u00e7enekleri
 NAD_MailOptionsSending = Posta g\u00f6nderme
 NAD_MailOptionsReceiving = Posta alma
 NAD_MailOptionsComposing = Posta olu\u015fturma
@@ -1374,14 +1372,11 @@ NAD_zimbraGeneralFeature = Genel \u00d6zellikler
 NAD_zimbraMailFeature = Posta \u00d6zellikleri
 NAD_zimbraContactFeature = Ki\u015fi \u00d6zellikleri
 NAD_zimbraCalendarFeature = Takvim \u00d6zellikleri
-NAD_zimbraChatFeature = Messenger \u00d6zellikleri
 NAD_zimbraSearchFeature = Arama \u00d6zellikleri
 LBL_zimbraFeatureNotebookEnabled = Belgeler
 LBL_zimbraFeatureBriefcasesEnabled = Evrak \u00c7antas\u0131
 LBL_zimbraFeatureHtmlComposeEnabled = HTML olu\u015ftur
-LBL_zimbraFeatureChatEnabled = Sohbet
 LBL_zimbraFeatureInstantNotify = Anl\u0131k Bildirimler
-LBL_zimbraPrefIMAutoLogin = Messenger hizmetlerinde otomatik olarak oturum a\u00e7
 NAD_Feature = \u00d6zellik: 
 LBL_zimbraFeatureViewInHtmlEnabled = Ekleri HTML olarak g\u00f6r\u00fcnt\u00fcleme
 LBL_zimbraFeatureGalEnabled = Global Adres Listesi eri\u015fimi
@@ -1503,7 +1498,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Randevu g\u00f6r\u00fcn\u00fcm\u00fcnd
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP arama klas\u00f6rlerini g\u00f6ster
 LBL_zimbraPrefMailForwardingAddress = Kullan\u0131c\u0131 taraf\u0131ndan belirlenen iletme adresleri:
 LBL_zimbraPrefMailForwardingAddressMsg = Kullan\u0131c\u0131 taraf\u0131ndan belirlenen iletme adresleri
-LBL_zimbraPrefChatPlaySound = Bildirim sesi \u00e7al
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mesajlar\u0131n yerel kopyas\u0131n\u0131 saklamama se\u00e7ene\u011fi belirlendi\u011finde en az\u0131ndan bir iletme adresi belirtilmelidir.
 
@@ -2773,3 +2767,4 @@ ERROR_RPNameCustomDisallowed = "{0}" ad\u0131 ayr\u0131lm\u0131\u015f bir beklet
 ERROR_InvalidRPLifetime = Aral\u0131k pozitif bir tamsay\u0131 olmal\u0131d\u0131r.
 ERROR_RPExists = "{0}" ilkesi zaten var.
 multiple_servers = birden fazla sunucu
+ERROR_INVALID_FILE_NAME = Ge\u00e7ersiz dosya ad\u0131. Ge\u00e7erli bir lisans dosyas\u0131 se\u00e7mek i\u00e7in G\u00f6zat d\u00fc\u011fmesini se\u00e7in.
