--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -909,9 +909,8 @@ NAD_DOC_MaxUploadSize = \u4ece\u684c\u9762\u4e0a\u4f20\u7684\u6700\u5927\u6587\u
 NAD_MTA_Options = \u9009\u9879\uff1a
 NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = \u5df2\u542f\u7528
-NAD_MTA_SMTP_Dns_Disabled = \u5df2\u505c\u7528
+NAD_MTA_SMTP_Dns_Disabled = \u5df2\u5173\u95ed
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = \u542f\u7528 DNS \u67e5\u8be2\uff1a
 NAD_MTA_ProtocolChecks = \u534f\u8bae\u68c0\u67e5
 NAD_MTA_reject_invalid_helo_hostname = \u663e\u793a\u7684\u4e3b\u673a\u540d\u8fdd\u53cd\u4e86 RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u5ba2\u6237\u7aef\u5fc5\u987b\u663e\u793a\u5168\u9650\u5b9a\u4e3b\u673a\u540d(reject_non_fqdn_helo_hostname)
@@ -1234,7 +1233,6 @@ NAD_MailOptions = \u90ae\u4ef6\u9009\u9879
 NAD_MailOptionsStandardClient = \u6807\u51c6 (HTML) \u5ba2\u6237\u7aef
 NAD_ContactsOptions = \u8054\u7cfb\u4eba\u9009\u9879
 NAD_CalendarOptions = \u65e5\u5386\u9009\u9879
-NAD_ChatOptions = \u804a\u5929\u529f\u80fd\u9009\u9879
 NAD_MailOptionsSending = \u53d1\u9001\u90ae\u4ef6
 NAD_MailOptionsReceiving = \u63a5\u6536\u90ae\u4ef6
 NAD_MailOptionsComposing = \u7f16\u5199\u90ae\u4ef6
@@ -1368,14 +1366,11 @@ NAD_zimbraGeneralFeature = \u4e00\u822c\u529f\u80fd
 NAD_zimbraMailFeature = \u90ae\u7bb1\u529f\u80fd
 NAD_zimbraContactFeature = \u4f9b\u8054\u7cfb\u4eba\u4f7f\u7528\u7684\u529f\u80fd
 NAD_zimbraCalendarFeature = \u65e5\u5386\u529f\u80fd
-NAD_zimbraChatFeature = IM \u529f\u80fd
 NAD_zimbraSearchFeature = \u641c\u7d22\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u6863
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u6587\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5199\u4fe1
-LBL_zimbraFeatureChatEnabled = \u804a\u5929
 LBL_zimbraFeatureInstantNotify = \u5373\u65f6\u901a\u77e5
-LBL_zimbraPrefIMAutoLogin = \u81ea\u52a8\u767b\u5f55\u5230\u5373\u65f6\u901a\u4fe1\u670d\u52a1
 NAD_Feature = \u529f\u80fd\uff1a 
 LBL_zimbraFeatureViewInHtmlEnabled = \u4ee5 HTML \u683c\u5f0f\u67e5\u770b\u9644\u4ef6
 LBL_zimbraFeatureGalEnabled = GAL \u5b58\u53d6
@@ -1497,7 +1492,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u5728\u7ea6\u4f1a\u89c6\u56fe\u4e2d\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u663e\u793a IMAP \u641c\u7d22\u6587\u4ef6\u5939
 LBL_zimbraPrefMailForwardingAddress = \u7528\u6237\u6307\u5b9a\u7684\u8f6c\u53d1\u5730\u5740\uff1a
 LBL_zimbraPrefMailForwardingAddressMsg = \u7528\u6237\u6307\u5b9a\u7684\u8f6c\u53d1\u5730\u5740
-LBL_zimbraPrefChatPlaySound = \u64ad\u653e\u901a\u77e5\u97f3
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u9009\u62e9\u4e0d\u4fdd\u7559\u90ae\u4ef6\u7684\u672c\u5730\u526f\u672c\u65f6\uff0c\u5fc5\u987b\u6307\u5b9a\u81f3\u5c11\u4e00\u4e2a\u8f6c\u53d1\u5730\u5740\u3002
 
@@ -2764,3 +2758,4 @@ ERROR_RPNameCustomDisallowed = \u540d\u79f0\u201c{0}\u201d\u662f\u9884\u7559\u76
 ERROR_InvalidRPLifetime = \u8303\u56f4\u5fc5\u987b\u662f\u6b63\u6574\u6570\u3002
 ERROR_RPExists = \u653f\u7b56\u201c{0}\u201d\u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u4e2a\u670d\u52a1\u5668
+ERROR_INVALID_FILE_NAME = \u6587\u4ef6\u540d\u65e0\u6548\u3002\u8bf7\u7528\u6d4f\u89c8\u6309\u94ae\u9009\u62e9\u6709\u6548\u7684\u6587\u4ef6\u3002
