--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -892,7 +892,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = \u5df2\u555f\u7528
 NAD_MTA_SMTP_Dns_Disabled = \u5df2\u505c\u7528
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = \u555f\u7528 DNS \u67e5\u8a62\uff1a
 NAD_MTA_ProtocolChecks = \u901a\u8a0a\u5354\u5b9a\u6aa2\u67e5
 NAD_MTA_reject_invalid_helo_hostname = \u4f7f\u7528\u4e3b\u6a5f\u540d\u7a31\u70ba\u554f\u5019\u8a9e\u9055\u53cd RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u7528\u6236\u7aef\u5fc5\u9808\u4f7f\u7528\u5b8c\u5168\u5408\u683c\u7684\u4e3b\u6a5f\u540d\u7a31\u70ba\u554f\u5019\u8a9e (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = \u90f5\u4ef6\u9078\u9805
 NAD_MailOptionsStandardClient = \u6a19\u6e96 (HTML) \u7528\u6236\u7aef
 NAD_ContactsOptions = \u806f\u7d61\u4eba\u9078\u9805
 NAD_CalendarOptions = \u8a18\u4e8b\u7c3f\u9078\u9805
-NAD_ChatOptions = \u804a\u5929\u529f\u80fd\u9078\u9805
 NAD_MailOptionsSending = \u50b3\u9001\u90f5\u4ef6
 NAD_MailOptionsReceiving = \u63a5\u6536\u90f5\u4ef6
 NAD_MailOptionsComposing = \u64b0\u5beb\u90f5\u4ef6
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = \u4e00\u822c\u529f\u80fd
 NAD_zimbraMailFeature = \u90f5\u7bb1\u529f\u80fd
 NAD_zimbraContactFeature = \u901a\u8a0a\u9304\u529f\u80fd
 NAD_zimbraCalendarFeature = \u8a18\u4e8b\u7c3f\u529f\u80fd
-NAD_zimbraChatFeature = IM \u529f\u80fd
 NAD_zimbraSearchFeature = \u641c\u5c0b\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u4ef6
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u4e8b\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5beb\u4fe1
-LBL_zimbraFeatureChatEnabled = \u804a\u5929
 LBL_zimbraFeatureInstantNotify = \u5373\u6642\u901a\u77e5
-LBL_zimbraPrefIMAutoLogin = \u81ea\u52d5\u767b\u5165\u5230\u5373\u6642\u901a\u4fe1\u670d\u52d9
 NAD_Feature = \u529f\u80fd\uff1a 
 LBL_zimbraFeatureViewInHtmlEnabled = \u4ee5 HTML \u683c\u5f0f\u67e5\u770b\u9644\u4ef6
 LBL_zimbraFeatureGalEnabled = \u5168\u7db2\u57df\u5730\u5740\u6e05\u55ae\u5b58\u53d6
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u5728\u9810\u7d04\u8996\u7a97\u4e2d\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u986f\u793a IMAP \u641c\u5c0b\u8cc7\u6599\u593e
 LBL_zimbraPrefMailForwardingAddress = \u7528\u6236\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740\ufe55
 LBL_zimbraPrefMailForwardingAddressMsg = \u7528\u6236\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740
-LBL_zimbraPrefChatPlaySound = \u64ad\u653e\u901a\u77e5\u97f3
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u82e5\u9078\u64c7\u4e0d\u5728\u672c\u6a5f\u4e0a\u4fdd\u7559\u90f5\u4ef6\u526f\u672c\uff0c\u5247\u9808\u6307\u5b9a\u81f3\u5c11\u4e00\u500b\u8f49\u5bc4\u5730\u5740\u3002
 
@@ -2694,3 +2688,4 @@ ERROR_RPNameCustomDisallowed = \u540d\u7a31 "{0}" \u662f\u4e00\u500b\u9810\u7559
 ERROR_InvalidRPLifetime = \u7bc4\u570d\u5fc5\u9808\u70ba\u4e00\u500b\u6b63\u6574\u6578\u3002
 ERROR_RPExists = \u539f\u5247 "{0}" \u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u500b\u4f3a\u670d\u5668
+ERROR_INVALID_FILE_NAME = \u6a94\u6848\u540d\u7a31\u7121\u6548\u3002\u8acb\u7528\u700f\u89bd\u6309\u9215\u9078\u64c7\u6709\u6548\u7684\u6a94\u6848\u3002
