--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -901,7 +901,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Aktiviert
 NAD_MTA_SMTP_Dns_Disabled = Deaktiviert
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS-Lookups aktivieren
 NAD_MTA_ProtocolChecks = Protokollpr\u00fcfung
 NAD_MTA_reject_invalid_helo_hostname = Hostname in der Begr\u00fc\u00dfung verst\u00f6\u00dft gegen RFC-Regeln (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Client muss Begr\u00fc\u00dfung mit voll qualifiziertem Hostnamen durchf\u00fchren (reject_non_fqdn_helo_hostname)
@@ -1224,7 +1223,6 @@ NAD_MailOptions = Mail-Optionen
 NAD_MailOptionsStandardClient = Standard-Client (HTML)
 NAD_ContactsOptions = Kontaktoptionen
 NAD_CalendarOptions = Kalenderoptionen
-NAD_ChatOptions = Chat-Optionen
 NAD_MailOptionsSending = Mail senden
 NAD_MailOptionsReceiving = Mail empfangen
 NAD_MailOptionsComposing = Mail verfassen
@@ -1358,14 +1356,11 @@ NAD_zimbraGeneralFeature = Allgemeine Funktionen
 NAD_zimbraMailFeature = Mailfunktionen
 NAD_zimbraContactFeature = Kontaktfunktionen
 NAD_zimbraCalendarFeature = Kalenderfunktionen
-NAD_zimbraChatFeature = IM-Funktionen
 NAD_zimbraSearchFeature = Suchfunktionen
 LBL_zimbraFeatureNotebookEnabled = Notizen
 LBL_zimbraFeatureBriefcasesEnabled = Dateien
 LBL_zimbraFeatureHtmlComposeEnabled = In HTML verfassen
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Unmittelbare Benachrichtigungen
-LBL_zimbraPrefIMAutoLogin = Automatisch bei Instant Messenger anmelden
 NAD_Feature = Funktion: 
 LBL_zimbraFeatureViewInHtmlEnabled = Anh\u00e4nge werden als HTML angezeigt
 LBL_zimbraFeatureGalEnabled = Zugriff auf globale Adressliste
@@ -1487,7 +1482,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Liste der Zeitzonen in Terminansicht
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP-Suchordner anzeigen
 LBL_zimbraPrefMailForwardingAddress = Vom Nutzer angegebene Weiterleitungsadressen:
 LBL_zimbraPrefMailForwardingAddressMsg = Vom Nutzer angegebene Weiterleitungsadressen
-LBL_zimbraPrefChatPlaySound = Benachrichtigungston wiedergeben
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mindestens eine Weiterleitungsadresse muss angegeben werden, wenn Sie keine lokalen Kopien der Mails behalten m\u00f6chten.
 
@@ -2735,7 +2729,7 @@ Q_Delete_RetentionPolicy_Confirm = Sie sind im Begriff, eine Aufbewahrungsregel 
 LBL_Policy_Name = Regelname:
 LBL_Policy_Retention = Aufbewahrungszeitraum:
 LBL_Policy_Purge = L\u00f6schschwellenwert:
-LBL_POLICY_COS_INHERIT_PROMPT = Regeln auf COS-Ebene aktivieren, statt von der in ''Globale Einstellungen'' definierten Regel zu erben.
+LBL_POLICY_COS_INHERIT_PROMPT = Regeln auf COS-Ebene aktivieren, statt von der in "Globale Einstellungen" definierten Regel zu erben.
 TTL_Policy_Add = Aufbewahrungsregel hinzuf\u00fcgen
 TTL_Policy_Edit = Aufbewahrungsregel bearbeiten
 ERROR_EmptyRPName = Geben Sie einen Regelnamen an.
@@ -2743,3 +2737,4 @@ ERROR_RPNameCustomDisallowed = Der Name "{0}" ist der reservierte Name einer Auf
 ERROR_InvalidRPLifetime = Der Bereich muss eine positive ganze Zahl sein.
 ERROR_RPExists = Die Regel "{0}" ist bereits vorhanden.
 multiple_servers = mehrere Server
+ERROR_INVALID_FILE_NAME = Ung\u00fcltiger Dateiname. Suchen Sie \u00fcber die Schaltfl\u00e4che nach einer g\u00fcltigen Datei.
