--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -887,7 +887,6 @@ NAD_MTA_RelayPort = Relay MTA port:
 NAD_MTA_MaxMsgSize = Maximum message size (KB):
 NAD_DOC_MaxUploadSize = Maximum size of a file uploaded from the desktop (KB):
 NAD_MTA_Options = Options:
-NAD_MTA_DnsLookups = Enable DNS lookups
 NAD_MTA_ProtocolChecks = Protocol checks
 NAD_MTA_reject_invalid_helo_hostname = Hostname in greeting violates RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Client must greet with a fully qualified hostname (reject_non_fqdn_helo_hostname)
@@ -1210,7 +1209,6 @@ NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
-NAD_ChatOptions = Chat Options
 NAD_MailOptionsSending = Sending mail
 NAD_MailOptionsReceiving = Receiving mail
 NAD_MailOptionsComposing = Composing mail
@@ -1344,14 +1342,11 @@ NAD_zimbraGeneralFeature = General Features
 NAD_zimbraMailFeature = Mail Features
 NAD_zimbraContactFeature = Contact Features
 NAD_zimbraCalendarFeature = Calendar Features
-NAD_zimbraChatFeature = IM Features
 NAD_zimbraSearchFeature = Search Features
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Briefcase
 LBL_zimbraFeatureHtmlComposeEnabled = HTML compose
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Instant Notifications
-LBL_zimbraPrefIMAutoLogin = Automatically log in to instant messaging services
 NAD_Feature = Feature: 
 LBL_zimbraFeatureViewInHtmlEnabled = Viewing attachments as HTML
 LBL_zimbraFeatureGalEnabled = Global Address List access
@@ -1473,7 +1468,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Show time zone list in appointment vie
 LBL_zimbraPrefImapSearchFoldersEnabled = Show IMAP search folders
 LBL_zimbraPrefMailForwardingAddress = User-specified forwarding addresses:
 LBL_zimbraPrefMailForwardingAddressMsg = User-specified forwarding addresses
-LBL_zimbraPrefChatPlaySound = Play notification sound
 
 ERROR_missing_zimbraPrefMailForwardingAddress = At least one forwarding address must be specified when choosing not to keep local copies of messages.
 
@@ -2674,3 +2668,4 @@ ERROR_RPNameCustomDisallowed = The name "{0}" is a reserved retention policy nam
 ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
+ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
