--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -37,7 +37,7 @@ label_prompt = Preguntar
 
 label_fontFamily_SansSerif = Sans Serif
 label_fontFamily_Serif = Serif
-label_fontFamily_Wide = Ancho
+label_fontFamily_Wide = Wide
 label_fontFamily_WideBlock = Wide Block
 label_fontFamily_Monospaced = Monospaced
 label_fontFamily_Comic = Comic
@@ -901,11 +901,10 @@ NAD_MTA_RelayPort = Puerto MTA de retransmisi\u00f3n:
 NAD_MTA_MaxMsgSize = Tama\u00f1o m\u00e1ximo del mensaje (KB):
 NAD_DOC_MaxUploadSize = Tama\u00f1o m\u00e1ximo de un archivo cargado desde el escritorio (KB):
 NAD_MTA_Options = Opciones:
-NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns = DNS de SMTP:
 NAD_MTA_SMTP_Dns_Enabled = Activado
 NAD_MTA_SMTP_Dns_Disabled = Desactivado
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Activar consultas de DNS
 NAD_MTA_ProtocolChecks = Comprobaciones de protocolo
 NAD_MTA_reject_invalid_helo_hostname = El nombre del servidor en el inicio de la comunicaci\u00f3n infringe RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = El cliente debe iniciar la comunicaci\u00f3n con un nombre de servidor totalmente cualificado (reject_non_fqdn_helo_hostname)
@@ -1228,7 +1227,6 @@ NAD_MailOptions = Opciones de correo
 NAD_MailOptionsStandardClient = Versi\u00f3n est\u00e1ndar (HTML)
 NAD_ContactsOptions = Opciones de Contactos
 NAD_CalendarOptions = Opciones de Agenda
-NAD_ChatOptions = Opciones de chat
 NAD_MailOptionsSending = Correo saliente
 NAD_MailOptionsReceiving = Correo entrante
 NAD_MailOptionsComposing = Redactar correo
@@ -1362,14 +1360,11 @@ NAD_zimbraGeneralFeature = Funciones generales
 NAD_zimbraMailFeature = Funciones de correo
 NAD_zimbraContactFeature = Funciones del contacto
 NAD_zimbraCalendarFeature = Funciones de la agenda
-NAD_zimbraChatFeature = Funciones de mensajer\u00eda instant\u00e1nea
 NAD_zimbraSearchFeature = Funciones de b\u00fasqueda
 LBL_zimbraFeatureNotebookEnabled = Bloc de notas
 LBL_zimbraFeatureBriefcasesEnabled = Malet\u00edn
 LBL_zimbraFeatureHtmlComposeEnabled = Redactar en HTML
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Alertas
-LBL_zimbraPrefIMAutoLogin = Iniciar sesi\u00f3n autom\u00e1ticamente en Messenger
 NAD_Feature = Funci\u00f3n: 
 LBL_zimbraFeatureViewInHtmlEnabled = Ver archivos adjuntos como HTML
 LBL_zimbraFeatureGalEnabled = Acceso a la Libreta de direcciones
@@ -1491,7 +1486,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Mostrar la lista de zonas horarias en 
 LBL_zimbraPrefImapSearchFoldersEnabled = Mostrar carpetas de b\u00fasqueda de IMAP
 LBL_zimbraPrefMailForwardingAddress = Direcciones de reenv\u00edo especificadas por el usuario:
 LBL_zimbraPrefMailForwardingAddressMsg = Direcciones de reenv\u00edo especificadas por el usuario
-LBL_zimbraPrefChatPlaySound = Reproducir sonido de notificaci\u00f3n
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Debe especificarse al menos una direcci\u00f3n de reenv\u00edo si se elige no guardar ninguna copia de los mensajes localmente.
 
@@ -2753,3 +2747,4 @@ ERROR_RPNameCustomDisallowed = El nombre "{0}" es un nombre de pol\u00edtica de 
 ERROR_InvalidRPLifetime = El rango debe ser un n\u00famero entero positivo.
 ERROR_RPExists = La pol\u00edtica "{0}" ya existe.
 multiple_servers = servidores m\u00faltiples
+ERROR_INVALID_FILE_NAME = Nombre de archivo no v\u00e1lido. Utiliza el bot\u00f3n Examinar para seleccionar un archivo v\u00e1lido.
