--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -39,13 +39,13 @@ label_fontFamily_SansSerif = Sans Serif
 label_fontFamily_Serif = Serif
 label_fontFamily_Wide = Wide
 label_fontFamily_WideBlock = Wide Block
-label_fontFamily_Monospaced = Courier New
+label_fontFamily_Monospaced = Monospaced
 label_fontFamily_Comic = Comic
 label_fontFamily_Console = Console
 label_fontFamily_Garamond = Garamond
-label_fontFamily_Elegant = Symbol
-label_fontFamily_Professional = Tahoma
-label_fontFamily_Terminal = Arial
+label_fontFamily_Elegant = Elegant
+label_fontFamily_Professional = Professional
+label_fontFamily_Terminal = Terminal
 label_fontFamily_Modern = Modern
 
 # ==================================================================================
@@ -911,10 +911,9 @@ NAD_MTA_MaxMsgSize = Mezuaren gehienezko tamaina (kb):
 NAD_DOC_MaxUploadSize = Mahaigaineko ordenagailutik igotako fitxategi baten gehienezko tamaina (KB):
 NAD_MTA_Options = Aukerak:
 NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = Aktibatuta
-NAD_MTA_SMTP_Dns_Disabled = Desaktibatua
+NAD_MTA_SMTP_Dns_Enabled = Gaituta
+NAD_MTA_SMTP_Dns_Disabled = Desgaituta
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Aktibatu DNSko kontsultak
 NAD_MTA_ProtocolChecks = Protokolo-egiaztapenak
 NAD_MTA_reject_invalid_helo_hostname = Komunikazioaren hasieran zerbitzariaren izenak RFCa (reject_invalid_hostname) urratzen du
 NAD_MTA_reject_non_fqdn_helo_hostname = Bezeroak guztiz kualifikatutako zerbitzari-izenaz hasi behar du komunikazioa (reject_non_fqdn_hostname)
@@ -1237,7 +1236,6 @@ NAD_MailOptions = Posta-aukerak
 NAD_MailOptionsStandardClient = Bertsio estandarra (HTML)
 NAD_ContactsOptions = Kontaktuen aukerak
 NAD_CalendarOptions = Agendako aukerak
-NAD_ChatOptions = Txataren aukerak
 NAD_MailOptionsSending = Irteerako posta
 NAD_MailOptionsReceiving = Sarrerako posta
 NAD_MailOptionsComposing = Mezua prestatzea
@@ -1371,14 +1369,11 @@ NAD_zimbraGeneralFeature = Funtzio orokorrak
 NAD_zimbraMailFeature = Posta-funtzioak
 NAD_zimbraContactFeature = Kontaktu-informazioa
 NAD_zimbraCalendarFeature = Agendaren funtzioak
-NAD_zimbraChatFeature = IM eginbideak
 NAD_zimbraSearchFeature = Bilaketa-funtzioak
 LBL_zimbraFeatureNotebookEnabled = Dokumentuak
 LBL_zimbraFeatureBriefcasesEnabled = Maleta
 LBL_zimbraFeatureHtmlComposeEnabled = Mezua prestatzea HTMLn
-LBL_zimbraFeatureChatEnabled = Txata
 LBL_zimbraFeatureInstantNotify = Alertak
-LBL_zimbraPrefIMAutoLogin = Hasi saioa automatikoki Messenger-en
 NAD_Feature = Funtzioa: 
 LBL_zimbraFeatureViewInHtmlEnabled = Ikusi eranskinak HTML gisa
 LBL_zimbraFeatureGalEnabled = Helbide-zerrendarako sarbidea
@@ -1500,7 +1495,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Bistaratu ordu-zonen zerrenda hitzordu
 LBL_zimbraPrefImapSearchFoldersEnabled = Bistaratu IMAPeko bilaketa-karpetak
 LBL_zimbraPrefMailForwardingAddress = Erabiltzaileak zehaztutako birbidalketa-helbideak:
 LBL_zimbraPrefMailForwardingAddressMsg = Erabiltzaileak zehaztutako birbidalketa-helbideak
-LBL_zimbraPrefChatPlaySound = Erreproduzitu jakinarazpenaren soinua
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Gutxienez, hartzaile-helbide bat idatzi behar da, tokiko kopiak ez gordetzeko aukeratzen denean.
 
@@ -2770,3 +2764,4 @@ ERROR_RPNameCustomDisallowed = "{0}" izena erreserbatutako atxikitze-politikako 
 ERROR_InvalidRPLifetime = Zehaztutako bolumen-bidea ez da baliozkoa
 ERROR_RPExists = "{0}" politika ez dago.
 multiple_servers = zerbitzari anitzak
+ERROR_INVALID_FILE_NAME = Fitxategiaren izenak ez du balio. Erabili arakatzeko botoia balio duen fitxategia hautatzeko.
