--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -908,7 +908,6 @@ NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = Activ\u00e9
 NAD_MTA_SMTP_Dns_Disabled = D\u00e9sactiv\u00e9
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Activer la v\u00e9rification DNS\u00a0:
 NAD_MTA_ProtocolChecks = V\u00e9rifications du protocole
 NAD_MTA_reject_invalid_helo_hostname = Le nom d'h\u00f4te dans le message d'accueil ne respecte pas les RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Le client doit accueillir avec un nom d'h\u00f4te complet (reject_non_fqdn__helo_hostname)
@@ -1231,7 +1230,6 @@ NAD_MailOptions = Options mail
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Options des contacts
 NAD_CalendarOptions = Options d'agenda
-NAD_ChatOptions = Options du chat
 NAD_MailOptionsSending = Envoi de mail
 NAD_MailOptionsReceiving = R\u00e9ception de mail
 NAD_MailOptionsComposing = Cr\u00e9ation de mail
@@ -1365,14 +1363,11 @@ NAD_zimbraGeneralFeature = Fonctions g\u00e9n\u00e9rales
 NAD_zimbraMailFeature = Fonctions de messagerie
 NAD_zimbraContactFeature = Fonctions relatives aux contacts
 NAD_zimbraCalendarFeature = Fonctions de calendrier
-NAD_zimbraChatFeature = Fonctionnalit\u00e9s de Messenger
 NAD_zimbraSearchFeature = Fonctions de recherche
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Porte-documents
 LBL_zimbraFeatureHtmlComposeEnabled = \u00c9criture en HTML\u00a0:
-LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifications instantan\u00e9es
-LBL_zimbraPrefIMAutoLogin = Connexion automatique aux services IM
 NAD_Feature = Fonction\u00a0: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visualiser les pi\u00e8ces jointes en HTML\u00a0:
 LBL_zimbraFeatureGalEnabled = Acc\u00e8s \u00e0 la liste LGA
@@ -1494,7 +1489,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afficher la liste de fuseaux horaires 
 LBL_zimbraPrefImapSearchFoldersEnabled = Afficher les dossiers de recherche IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresses de redirection saisies par l'utilisateur\u00a0:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresses de redirection saisies par l'utilisateur
-LBL_zimbraPrefChatPlaySound = \u00c9mettre un son pour les notifications
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Si vous d\u00e9cidez de ne pas conserver une copie locale de vos mails, vous devez sp\u00e9cifier au moins une adresse de transfert.
 
@@ -2754,3 +2748,4 @@ ERROR_RPNameCustomDisallowed = \u00ab\u00a0{0}\u00a0\u00bb est un nom de r\u00e8
 ERROR_InvalidRPLifetime = La plage doit \u00eatre un nombre entier positif.
 ERROR_RPExists = La r\u00e8gle \u00ab\u00a0{0}\u00a0\u00bb existe d\u00e9j\u00e0.
 multiple_servers = serveurs multiples
+ERROR_INVALID_FILE_NAME = Nom de fichier incorrect. Pour s\u00e9lectionner un fichier correct, utilisez le bouton de navigation (Parcourir).
