--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -889,10 +889,9 @@ NAD_MTA_MaxMsgSize = \u0905\u0927\u093f\u0915\u0924\u092e \u0938\u0902\u0926\u09
 NAD_DOC_MaxUploadSize = \u0921\u0947\u0938\u094d\u0915\u091f\u0949\u092a \u0938\u0947 \u0905\u092a\u0932\u094b\u0921 \u0915\u0940 \u091c\u093e\u0928\u0947 \u0935\u093e\u0932\u0940 \u0915\u093f\u0938\u0940 \u092b\u093c\u093e\u0907\u0932 \u0915\u093e \u0905\u0927\u093f\u0915\u0915\u092e \u0906\u0915\u093e\u0930 (KB):
 NAD_MTA_Options = \u0935\u093f\u0915\u0932\u094d\u092a:
 NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = \u0938\u0915\u094d\u0937\u092e
-NAD_MTA_SMTP_Dns_Disabled = \u0905\u0915\u094d\u0937\u092e
+NAD_MTA_SMTP_Dns_Enabled = \u0938\u0915\u094d\u0937\u092e \u0915\u093f\u092f\u093e \u0917\u092f\u093e
+NAD_MTA_SMTP_Dns_Disabled = \u0905\u0915\u094d\u0937\u092e \u0915\u093f\u092f\u093e \u0917\u092f\u093e
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS \u0932\u0941\u0915\u0905\u092a \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
 NAD_MTA_ProtocolChecks = \u092a\u094d\u0930\u094b\u091f\u093e\u0915\u0949\u0932 \u091c\u093e\u0901\u091a \u0915\u0947 \u092c\u093f\u0902\u0926\u0941
 NAD_MTA_reject_invalid_helo_hostname = \u0905\u092d\u093f\u0935\u093e\u0926\u0928 \u092e\u0947\u0902 \u0939\u094b\u0938\u094d\u091f\u0928\u093e\u092e RFC \u0915\u093e \u0909\u0932\u094d\u0932\u0902\u0918\u0928 \u0915\u0930\u0924\u093e \u0939\u0948 (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u0915\u094d\u200d\u0932\u093e\u092f\u0902\u091f \u0915\u094b \u092a\u0942\u0930\u0940 \u0924\u0930\u0939 \u0938\u0947 \u092f\u094b\u0917\u094d\u200d\u092f \u0939\u094b\u0938\u094d\u200d\u091f\u0928\u093e\u092e \u0915\u0947 \u0938\u093e\u0925 \u0905\u092d\u093f\u0935\u093e\u0926\u0928 \u0915\u0930\u0928\u093e \u091a\u093e\u0939\u093f\u090f (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = \u092e\u0947\u0932 \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_MailOptionsStandardClient = \u092e\u093e\u0928\u0915 (HTML) \u0915\u094d\u0932\u093e\u0907\u0902\u091f
 NAD_ContactsOptions = \u0938\u0902\u092a\u0930\u094d\u0915 \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_CalendarOptions = \u0915\u0948\u0932\u0947\u0902\u0921\u0930 \u0935\u093f\u0915\u0932\u094d\u092a
-NAD_ChatOptions = \u091a\u0948\u091f \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_MailOptionsSending = \u092e\u0947\u0932 \u092d\u0947\u091c\u0928\u093e
 NAD_MailOptionsReceiving = \u092e\u0947\u0932 \u092a\u094d\u0930\u093e\u092a\u094d\u200d\u0924 \u0915\u0930\u0928\u093e
 NAD_MailOptionsComposing = \u092e\u0947\u0932 \u0932\u093f\u0916\u0928\u093e
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = \u0938\u093e\u092e\u093e\u0928\u094d\u200d\u092f \u09
 NAD_zimbraMailFeature = \u092e\u0947\u0932 \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901
 NAD_zimbraContactFeature = \u0938\u0902\u092a\u0930\u094d\u0915 \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901
 NAD_zimbraCalendarFeature = \u0915\u0948\u0932\u0947\u0902\u0921\u0930 \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901
-NAD_zimbraChatFeature = IM \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901
 NAD_zimbraSearchFeature = \u0916\u094b\u091c \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901
 LBL_zimbraFeatureNotebookEnabled = \u0926\u0938\u094d\u200d\u0924\u093e\u0935\u0947\u091c\u093c
 LBL_zimbraFeatureBriefcasesEnabled = \u092c\u094d\u0930\u0940\u092b\u093c\u0915\u0947\u0938
 LBL_zimbraFeatureHtmlComposeEnabled = HTML \u0932\u093f\u0916\u0928\u093e
-LBL_zimbraFeatureChatEnabled = \u091a\u0948\u091f
 LBL_zimbraFeatureInstantNotify = \u0907\u0902\u0938\u094d\u091f\u0947\u0902\u091f \u0938\u0942\u091a\u0928\u093e\u090f\u0901
-LBL_zimbraPrefIMAutoLogin = \u0907\u0902\u0938\u094d\u091f\u0947\u0902\u091f \u092e\u0948\u0938\u0947\u0902\u091c\u093f\u0902\u0917 \u0938\u0947\u0935\u093e\u0913\u0902 \u092e\u0947\u0902 \u0938\u094d\u200d\u0935\u0924: \u0932\u0949\u0917\u0907\u0928 \u0915\u0930\u0947\u0902
 NAD_Feature = \u0938\u0941\u0935\u093f\u0927\u093e\u090f\u0901: 
 LBL_zimbraFeatureViewInHtmlEnabled = \u0905\u091f\u0948\u091a\u092e\u0947\u0902\u091f\u094d\u0938 \u0915\u094b HTML \u0915\u0947 \u0930\u0942\u092a \u092e\u0947\u0902 \u0926\u0947\u0916\u0928\u093e
 LBL_zimbraFeatureGalEnabled = \u0935\u0948\u0936\u094d\u0935\u093f\u0915 \u090f\u0921\u094d\u0930\u0948\u0938 \u0938\u0942\u091a\u0940 \u090f\u0915\u094d\u0938\u0947\u0938
@@ -1377,7 +1372,7 @@ LBL_zimbraFeatureChangePasswordEnabled = \u092a\u093e\u0938\u0935\u0930\u094d\u0
 LBL_zimbraFeatureInitialSearchPreferenceEnabled = \u0936\u0941\u0930\u0942\u0906\u0924\u0940 \u0916\u094b\u091c \u092a\u094d\u0930\u093e\u0925\u092e\u093f\u0915\u0924\u093e
 LBL_zimbraFeaturePeopleSearchEnabled = \u0932\u094b\u0917\u094b\u0902 \u0915\u094b \u0916\u094b\u091c\u0947\u0902
 LBL_zimbraFeatureFiltersEnabled = \u092e\u0947\u0932 \u092b\u093c\u093f\u0932\u094d\u091f\u0930\u094d\u0938
-LBL_zimbraFeatureMailForwardingEnabled = \u092f\u0942\u091c\u093c\u0930 \u0915\u094b \u0915\u094b\u0908 \u092b\u0949\u0930\u093e\u0935\u0930\u094d\u0921\u093f\u0902\u0917 \u090f\u0921\u094d\u0930\u0948\u0938 \u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u200d\u091f \u0915\u0930\u0928\u0947 \u0915\u0940 \u0905\u0928\u0941\u092e\u0924\u093f \u0926\u0947\u0902
+LBL_zimbraFeatureMailForwardingEnabled = \u092f\u0942\u091c\u093c\u0930 \u0915\u094b \u0915\u094b\u0908 \u092b\u0949\u0930\u093e\u0935\u0930\u094d\u0921\u093f\u0902\u0917 \u090f\u0921\u094d\u0930\u0948\u0938 \u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u200d\u091f \u0915\u0930\u0928\u0947 \u0915\u0940 \u0905\u0928\u0941\u092e\u0924\u093f\u00a0\u0926\u0947\u0902
 LBL_zimbraImapEnabled = IMAP \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraPop3Enabled = POP3 \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraExternalImapEnabled = \u092c\u093e\u0939\u094d\u092f IMAP \u090f\u0915\u094d\u0938\u0947\u0938
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u0905\u092a\u0949\u0907\u0902\u091f\u
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP \u0916\u094b\u091c \u092b\u093c\u094b\u0932\u094d\u200d\u0921\u0930\u094d\u0938 \u0926\u093f\u0916\u093e\u090f\u0901
 LBL_zimbraPrefMailForwardingAddress = \u092f\u0942\u091c\u093c\u0930-\u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u091f \u092b\u093c\u0949\u0930\u0935\u0930\u094d\u0921\u093f\u0902\u0917 \u090f\u0921\u094d\u0930\u0948\u0938
 LBL_zimbraPrefMailForwardingAddressMsg = \u092f\u0942\u091c\u094d\u200d\u093c\u093e\u0930-\u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u091f \u092b\u093c\u0949\u0930\u0935\u0930\u094d\u0921\u093f\u0902\u0917 \u090f\u0921\u094d\u0930\u0948\u0938
-LBL_zimbraPrefChatPlaySound = \u0938\u0942\u091a\u0928\u093e \u0927\u094d\u0935\u0928\u093f \u091a\u0932\u093e\u090f\u0901
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u0938\u0902\u0926\u0947\u0936\u094b\u0902 \u0915\u0940 \u0938\u094d\u0925\u093e\u0928\u0940\u092f \u092a\u094d\u0930\u0924\u093f \u0928 \u0930\u0916\u0947\u0902 \u091a\u0941\u0928\u0924\u0947 \u0938\u092e\u092f \u0915\u092e \u0938\u0947 \u0915\u092e \u090f\u0915 \u0905\u0917\u094d\u0930\u0947\u0937\u0923 \u092a\u0924\u093e \u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u091f \u0915\u093f\u092f\u093e \u091c\u093e\u0928\u093e \u091a\u093e\u0939\u093f\u090f.
 
@@ -2679,3 +2673,4 @@ ERROR_RPNameCustomDisallowed = "{0}" \u0928\u093e\u092e \u090f\u0915 \u0906\u093
 ERROR_InvalidRPLifetime = \u0938\u0940\u092e\u093e \u090f\u0915 \u0938\u0915\u093e\u0930\u093e\u0924\u094d\u092e\u0915 \u092a\u0942\u0930\u094d\u0923\u093e\u0902\u0915 \u0939\u094b\u0928\u0940 \u091a\u093e\u0939\u093f\u090f.
 ERROR_RPExists = "{0}" \u0928\u0940\u0924\u093f \u092a\u0939\u0932\u0947 \u0938\u0947 \u092e\u094c\u091c\u0942\u0926 \u0939\u0948.
 multiple_servers = \u090f\u0915\u093e\u0927\u093f\u0915 \u0938\u0930\u094d\u0935\u0930
+ERROR_INVALID_FILE_NAME = \u0905\u092e\u093e\u0928\u094d\u092f \u092b\u093c\u093e\u0907\u0932 \u0928\u093e\u092e. \u0915\u093f\u0938\u0940 \u092e\u093e\u0928\u094d\u200d\u092f \u092b\u093c\u093e\u0907\u0932 \u0915\u094b \u091a\u0941\u0928\u0928\u0947 \u0915\u0947 \u0932\u093f\u090f \u092c\u094d\u0930\u093e\u0909\u091c\u093c \u092c\u091f\u0928 \u0915\u093e \u0909\u092a\u092f\u094b\u0917 \u0915\u0930\u0947\u0902.
