--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -361,7 +361,7 @@ Domain_zimbraDomainStatus = \u30c9\u30e1\u30a4\u30f3\u30b9\u30c6\u30fc\u30bf\u30
 Domain_GalConfig_Complete = \u30c9\u30e1\u30a4\u30f3GAL\u306e\u8a2d\u5b9a\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f\u3002<br>\
 	[\u5b8c\u4e86]\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u5909\u66f4\u5185\u5bb9\u3092\u4fdd\u5b58\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Domain_Auth_Config_Complete = \u30c9\u30e1\u30a4\u30f3\u8a8d\u8a3c\u306e\u8a2d\u5b9a\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f\u3002<br>[\u5b8c\u4e86]\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u5909\u66f4\u5185\u5bb9\u3092\u4fdd\u5b58\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-	
+
 Domain_Config_Complete = \u65b0\u3057\u3044\u30c9\u30e1\u30a4\u30f3\u306e\u8a2d\u5b9a\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f\u3002<br> [\u5b8c\u4e86] \u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u3001\u65b0\u3057\u3044\u30c9\u30e1\u30a4\u30f3\u3092\u4fdd\u5b58\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Domain_DomainName = \u30c9\u30e1\u30a4\u30f3\u540d\uff1a
 Domain_Locked_Note = \u3053\u306e\u30c9\u30e1\u30a4\u30f3\u306f\u30e6\u30fc\u30b6\u30fc\u306b\u3088\u3063\u3066\u4e00\u6642\u7684\u306b\u30ed\u30c3\u30af\u3055\u308c\u3066\u3044\u307e\u3059\u3002 \u5185\u90e8\u30ed\u30c3\u30af\u304c\u89e3\u9664\u3055\u308c\u308b\u307e\u3067\u3001\u30c9\u30e1\u30a4\u30f3\u306b\u5909\u66f4\u3092\u52a0\u3048\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
@@ -567,7 +567,7 @@ ACTBB_New_tt = \u65b0\u3057\u3044\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u4f5c\u621
 ACTBB_Edit_tt = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u7de8\u96c6
 ACTBB_Delete_tt = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664
 ACTBB_ChngPwd_tt = \u30e6\u30fc\u30b6\u30fc\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5909\u66f4
-                                                
+
 ACTBB_MoveAlias_tt = \u9078\u629e\u3057\u305f\u30a8\u30a4\u30ea\u30a2\u30b9\u3092\u5225\u306e\u30a2\u30ab\u30a6\u30f3\u30c8\u306b\u79fb\u52d5
 TBB_Help_tt = \u73fe\u5728\u306e\u753b\u9762\u306b\u95a2\u9023\u3057\u305f\u30d8\u30eb\u30d7\u30c8\u30d4\u30c3\u30af\u3092\u8868\u793a
 ACTBB_ReindexMbx_tt = 1\u3064\u306e\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\u306e\u30a4\u30f3\u30c7\u30c3\u30af\u30b9\u3092\u518d\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30a6\u30a3\u30b6\u30fc\u30c9\u3092\u958b\u304f
@@ -896,11 +896,10 @@ NAD_MTA_RelayPort = \u30ea\u30ec\u30fcMTA\u30dd\u30fc\u30c8\uff1a
 NAD_MTA_MaxMsgSize = \u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u6700\u5927\u30b5\u30a4\u30ba\uff08KB\uff09\uff1a
 NAD_DOC_MaxUploadSize = \u30c7\u30b9\u30af\u30c8\u30c3\u30d7\u304b\u3089\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u308b\u30d5\u30a1\u30a4\u30eb\u306e\u6700\u5927\u30b5\u30a4\u30ba\uff08KB\uff09\uff1a
 NAD_MTA_Options = \u30aa\u30d7\u30b7\u30e7\u30f3\uff1a
-NAD_MTA_SMTP_Dns = SMTP DNS:
+NAD_MTA_SMTP_Dns = SMTP DNS\uff1a
 NAD_MTA_SMTP_Dns_Enabled = \u6709\u52b9
 NAD_MTA_SMTP_Dns_Disabled = \u7121\u52b9
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = DNS\u53c2\u7167\u3092\u6709\u52b9\u306b\u3059\u308b
 NAD_MTA_ProtocolChecks = \u30d7\u30ed\u30c8\u30b3\u30eb\u30c1\u30a7\u30c3\u30af
 NAD_MTA_reject_invalid_helo_hostname = HELO \u307e\u305f\u306f EHLO \u30db\u30b9\u30c8\u540d\u306e\u6587\u6cd5\u304c\u4e0d\u6b63\u306a\u5834\u5408\u306b\u3001\u8981\u6c42\u3092\u62d2\u5426(reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = HELO \u307e\u305f\u306f EHLO \u30db\u30b9\u30c8\u540d\u306e\u6587\u6cd5\u304c RFC \u3067\u8981\u6c42\u3055\u308c\u3066\u3044\u308b\u3088\u3046\u306a\u5b8c\u5168\u4fee\u98fe\u30c9\u30e1\u30a4\u30f3\u5f62\u5f0f\u3067\u306f\u306a\u3044\u5834\u5408\u306b\u3001\u8981\u6c42\u3092\u62d2\u5426(reject_non_fqdn_helo_hostname)
@@ -1055,7 +1054,7 @@ NAD_MailTransport = \u30e1\u30fc\u30eb\u30c8\u30e9\u30f3\u30b9\u30dd\u30fc\u30c8
 NAD_MailTransportGrouper = \u30e1\u30fc\u30eb\u30c8\u30e9\u30f3\u30b9\u30dd\u30fc\u30c8
 ERROR_MAILTRANSPORT_INVALID = LMTP\u307e\u305f\u306fSMTP\u306e\u30c8\u30e9\u30f3\u30b9\u30dd\u30fc\u30c8\u5b9a\u7fa9\u304c\u7121\u52b9\u3067\u3059
 MSG_MailTransportMessage = \u30e1\u30fc\u30eb\u306e\u8ee2\u9001\u306e\u5f62\u5f0f\u306f\u300c\u30d7\u30ed\u30c8\u30b3\u30eb\u300d:\u300c\u30b5\u30fc\u30d0\u30fc\u300d:\u300c\u30dd\u30fc\u30c8\u300d\uff08smtp:smtp.zimbrasmtpserver.com:25\u306a\u3069\uff09\u3067\u3059\u3002 
- 
+
 NAD_AccountName = \u30a2\u30ab\u30a6\u30f3\u30c8\u540d\uff1a
 NAD_Email = \u30e1\u30fc\u30eb\uff1a
 NAD_Account = \u30a2\u30ab\u30a6\u30f3\u30c8
@@ -1224,7 +1223,6 @@ NAD_MailOptions = \u30e1\u30fc\u30eb\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_MailOptionsStandardClient = \u6a19\u6e96\uff08HTML\uff09\u30af\u30e9\u30a4\u30a2\u30f3\u30c8
 NAD_ContactsOptions = \u9023\u7d61\u5148\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_CalendarOptions = \u30ab\u30ec\u30f3\u30c0\u30fc\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
-NAD_ChatOptions = \u30c1\u30e3\u30c3\u30c8\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_MailOptionsSending = \u30e1\u30fc\u30eb\u306e\u9001\u4fe1
 NAD_MailOptionsReceiving = \u30e1\u30fc\u30eb\u306e\u53d7\u4fe1
 NAD_MailOptionsComposing = \u30e1\u30fc\u30eb\u3092\u4f5c\u6210
@@ -1358,14 +1356,11 @@ NAD_zimbraGeneralFeature = \u5168\u822c\u7684\u306a\u6a5f\u80fd
 NAD_zimbraMailFeature = \u30e1\u30fc\u30eb\u306e\u6a5f\u80fd
 NAD_zimbraContactFeature = \u9023\u7d61\u5148\u306e\u6a5f\u80fd
 NAD_zimbraCalendarFeature = \u30ab\u30ec\u30f3\u30c0\u30fc\u306e\u6a5f\u80fd
-NAD_zimbraChatFeature = IM \u306e\u6a5f\u80fd
 NAD_zimbraSearchFeature = \u691c\u7d22\u306e\u6a5f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u66f8
 LBL_zimbraFeatureBriefcasesEnabled = \u30d6\u30ea\u30fc\u30d5\u30b1\u30fc\u30b9
 LBL_zimbraFeatureHtmlComposeEnabled = HTML\u4f5c\u6210
-LBL_zimbraFeatureChatEnabled = \u30c1\u30e3\u30c3\u30c8
 LBL_zimbraFeatureInstantNotify = \u30a4\u30f3\u30b9\u30bf\u30f3\u30c8\u901a\u77e5
-LBL_zimbraPrefIMAutoLogin = \u30a4\u30f3\u30b9\u30bf\u30f3\u30c8\u30e1\u30c3\u30bb\u30fc\u30b8\u30b5\u30fc\u30d3\u30b9\u306b\u81ea\u52d5\u7684\u306b\u30ed\u30b0\u30a4\u30f3
 NAD_Feature = \u6a5f\u80fd\uff1a 
 LBL_zimbraFeatureViewInHtmlEnabled = \u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u3092HTML\u5f62\u5f0f\u3067\u8868\u793a
 LBL_zimbraFeatureGalEnabled = \u30b0\u30ed\u30fc\u30d0\u30eb\u30a2\u30c9\u30ec\u30b9\u30ea\u30b9\u30c8\u30a2\u30af\u30bb\u30b9
@@ -1487,7 +1482,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u4e88\u5b9a\u30d3\u30e5\u30fc\u306b\u
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP\u691c\u7d22\u30d5\u30a9\u30eb\u30c0\u3092\u8868\u793a
 LBL_zimbraPrefMailForwardingAddress = \u30e6\u30fc\u30b6\u30fc\u6307\u5b9a\u306e\u8ee2\u9001\u5148\u30a2\u30c9\u30ec\u30b9\uff1a
 LBL_zimbraPrefMailForwardingAddressMsg = \u30e6\u30fc\u30b6\u30fc\u6307\u5b9a\u306e\u8ee2\u9001\u5148\u30a2\u30c9\u30ec\u30b9
-LBL_zimbraPrefChatPlaySound = \u901a\u77e5\u97f3\u3092\u9cf4\u3089\u3059
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u3092\u4fdd\u6301\u3057\u306a\u3044\u3088\u3046\u306b\u9078\u629e\u3057\u305f\u5834\u5408\u306f\u3001\u8ee2\u9001\u5148\u30a2\u30c9\u30ec\u30b9\u3092\u5c11\u306a\u304f\u3068\u30821\u3064\u6307\u5b9a\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 
@@ -1696,7 +1690,7 @@ resourceStatus_closed = \u4f7f\u7528\u4e0d\u53ef
 ErrorInvalidEmailAddress = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u304c\u7121\u52b9\u3067\u3059
 ErrorInvalidEmailAddressList = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u30ea\u30b9\u30c8\u304c\u7121\u52b9\u3067\u3059
 ErrorEmptyEmailAddress = \u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u304c\u7a7a\u3067\u3059
- 
+
 NCD_NewAccTitle = \u65b0\u3057\u3044\u30a2\u30ab\u30a6\u30f3\u30c8
 NCD_Title = \u65b0\u3057\u3044\u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u3092\u4f5c\u6210
 NCD_Name = \u540d\u524d
@@ -2228,7 +2222,7 @@ Alias_Dlg_label_target_acct = \u30bf\u30fc\u30b2\u30c3\u30c8\u30a2\u30ab\u30a6\u
 #License
 TBB_UpdateLicense = \u30e9\u30a4\u30bb\u30f3\u30b9\u3092\u66f4\u65b0
 ALTBB_UpdateLicense_tt = \u30e9\u30a4\u30bb\u30f3\u30b9\u30ad\u30fc\u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u30a6\u30a3\u30b6\u30fc\u30c9\u3092\u4f7f\u7528\u3057\u3066\u30e9\u30a4\u30bb\u30f3\u30b9\u3092\u66f4\u65b0
- 
+
 
 #TABS
 tt_tab_View = \u8868\u793a 
@@ -2730,3 +2724,4 @@ ERROR_RPNameCustomDisallowed = \u540d\u524d"{0}"\u306f\u4e88\u7d04\u3055\u308c\u
 ERROR_InvalidRPLifetime = \u7bc4\u56f2\u306f\u6b63\u306e\u6574\u6570\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 ERROR_RPExists = \u30dd\u30ea\u30b7\u30fc"{0}"\u306f\u3059\u3067\u306b\u5b58\u5728\u3057\u307e\u3059\u3002
 multiple_servers = \u8907\u6570\u306e\u30b5\u30fc\u30d0\u30fc
+ERROR_INVALID_FILE_NAME = \u30d5\u30a1\u30a4\u30eb\u540d\u304c\u7121\u52b9\u3067\u3059\u3002\u53c2\u7167\u30dc\u30bf\u30f3\u3092\u4f7f\u7528\u3057\u3066\u3001\u6709\u52b9\u306a\u30d5\u30a1\u30a4\u30eb\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
