--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -917,9 +917,8 @@ NAD_DOC_MaxUploadSize = \u0e82\u0eb0\u0edc\u0eb2\u0e94\u200b\u0e82\u0ecd\u0ec9\u
 NAD_MTA_Options = \u0e97\u0eb2\u0e87\u0ec0\u0ea5\u0eb7\u0ead\u0e81:
 NAD_MTA_SMTP_Dns = SMTP DNS:
 NAD_MTA_SMTP_Dns_Enabled = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0ec1\u0ea5\u0ec9\u0ea7
-NAD_MTA_SMTP_Dns_Disabled = \u0e9a\u0ecd\u0ec8\u0ec0\u0eae\u0eb1\u0e94\u0ec3\u0eab\u0ec9\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ec0\u0eae\u0eb1\u0e94\u0ea7\u0ebd\u0e81\u0ec4\u0e94\u0ec9
+NAD_MTA_SMTP_Dns_Disabled = \u0e9b\u0eb4\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0ec1\u0ea5\u0ec9\u0ea7
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e87\u0eb2\u0e99\u200b\u0e81\u0eb2\u0e99\u200b\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2 DNS
 NAD_MTA_ProtocolChecks = \u0e81\u0ea7\u0e94\u200b\u0ec0\u0e8a\u0eb1\u0e81\u0ec2\u0e9b\u0ebc\u0ec2\u0e95\u0ec2\u0e84\u0ea5
 NAD_MTA_reject_invalid_helo_hostname = \u0e8a\u0eb7\u0ec8\u200b\u0ec1\u0ea1\u0ec8\u0e82\u0ec8\u0eb2\u0e8d\u200b\u0ea5\u0eb0\u200b\u0ec0\u0ea1\u0eb5\u0e94\u200b\u0e84\u0eb3\u0e97\u0eb1\u0e81\u200b\u0e97\u0eb2\u0e8d RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u0ea5\u0eb9\u0e81\u200b\u0e84\u0ec9\u0eb2\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e8a\u0eb7\u0ec8\u200b\u0ec2\u0eae\u200b\u0eaa\u0ecc\u0e84\u0eb3\u200b\u0e97\u0eb1\u0e81\u200b\u0e97\u0eb2\u0e8d\u0e95\u0ec9\u0ead\u0e87\u200b\u0ea1\u0eb5\u200b\u0e84\u0eb8\u200b\u0e99\u0eaa\u0ebb\u0ea1\u0e9a\u0eb1\u0e94\u200b\u0e84\u0ebb\u0e9a\u200b\u0e96\u0ec9\u0ea7\u0e99 (reject_non_fqdn_helo_hostname)
@@ -1242,7 +1241,6 @@ NAD_MailOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ec0\u
 NAD_MailOptionsStandardClient = \u200b\u0ec0\u0e84\u0eb7\u0ead\u200b\u0e82\u0ec8\u0eb2\u0e8d\u200b\u0ea5\u0eb9\u0e81 (HTML) \u0ea1\u0eb2\u0e94\u0e95\u0eb0\u0e96\u0eb2\u0e99
 NAD_ContactsOptions = \u0e95\u0ebb\u0ea7\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_CalendarOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
-NAD_ChatOptions = \u0e97\u0eb2\u0e87\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e81\u0eb2\u0e99\u200b\u0ec1\u0e8a\u0eb1\u0e94
 NAD_MailOptionsSending = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0ec0\u0ea1\u0ea7
 NAD_MailOptionsReceiving = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u0eae\u0eb1\u0e9a\u200b\u0ec0\u0ea1\u0ea7
 NAD_MailOptionsComposing = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u200b\u0eae\u0ec8\u0eb2\u0e87\u0ec0\u0ea1\u0ea7
@@ -1376,14 +1374,11 @@ NAD_zimbraGeneralFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e9
 NAD_zimbraMailFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e94\u200b\u0eaa\u0eb0\u200b\u0e99\u0eb0\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec0\u0ea1\u200b\u0ea7
 NAD_zimbraContactFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_zimbraCalendarFeature = \u0e84\u0eb8\u0e99\u200b\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u200b\u0e82\u0ead\u0e87\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
-NAD_zimbraChatFeature = \u0e9f\u0eb5\u200b\u0ec0\u0e88\u0eb5 IM
 NAD_zimbraSearchFeature = \u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2\u200b\u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0
 LBL_zimbraFeatureNotebookEnabled = \u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureBriefcasesEnabled = \u0e81\u0eb0\u0ec0\u0e9b\u0ebb\u0eb2\u0ec3\u0eaa\u0ec8\u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureHtmlComposeEnabled = \u0eae\u0ec8\u0eb2\u0e87 HTML 
-LBL_zimbraFeatureChatEnabled = \u0e81\u0eb2\u0e99\u200b\u0ec1\u0e8a\u0eb1\u0e94
 LBL_zimbraFeatureInstantNotify = \u200b\u0ec1\u0e88\u0ec9\u0e87\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a
-LBL_zimbraPrefIMAutoLogin = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0eaa\u0eb9\u0ec8\u200b\u0e81\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ea5\u0eb4\u0e81\u0eb2\u0e99\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a\u200b\u0ec2\u0e94\u0e8d\u200b\u0ead\u0eb1\u0e94\u0e95\u0eb0\u200b\u0ec2\u0e99\u200b\u0ea1\u0eb1\u0e94 
 NAD_Feature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0: 
 LBL_zimbraFeatureViewInHtmlEnabled = \u200b\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u200b\u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99\u200b\u200b\u0e84\u0eb1\u0e94\u0e95\u0eb4\u0e94\u200b\u0ec0\u0e9b\u0eb1\u0e99 HTML
 LBL_zimbraFeatureGalEnabled = \u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0ec0\u0e96\u0eb4\u0e87\u0ea5\u0eb2\u0e8d\u200b\u0e8a\u0eb7\u0ec8\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u200b\u0e97\u0ebb\u0ec8\u0ea7\u200b\u0ec2\u0ea5\u0e81
@@ -1505,7 +1500,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u200b\u0ec2\u0e9f\u0e99\u200b\u0ec0\u0e94\u0eb5\u200b\u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2 IMAP 
 LBL_zimbraPrefMailForwardingAddress = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea5\u0eb0\u0e9a\u0eb8:
 LBL_zimbraPrefMailForwardingAddressMsg = \u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea5\u0eb0\u0e9a\u0eb8
-LBL_zimbraPrefChatPlaySound = \u0eab\u0ebc\u0eb4\u0ec9\u0e99\u200b\u0e81\u0eb2\u0e99\u200b\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0ebd\u0e87
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u0ea2\u0ec8\u0eb2\u0e87\u200b\u0edc\u0ec9\u0ead\u0e8d\u200b\u0e95\u0ec9\u0ead\u0e87\u200b\u0ea5\u0eb0\u0e9a\u0eb8\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u0edc\u0eb6\u0ec8\u0e87\u200b\u0e97\u0eb5\u0ec8\u200b\u0ea2\u0eb9\u0ec8\u200b \u200b\u200b\u0ec0\u0ea1\u0eb7\u0ec8\u0ead\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e9a\u0ecd\u0ec8\u200b\u200b\u0ec0\u0e81\u0eb1\u0e9a\u0eae\u0eb1\u0e81\u0eaa\u0eb2\u200b\u0eaa\u0eb3\u200b\u0ec0\u0e99\u0ebb\u0eb2\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec4\u0ea7\u0ec9.
 
@@ -2779,3 +2773,4 @@ ERROR_RPNameCustomDisallowed = \u0e8a\u0eb7\u0ec8 "{0}" \u0ec1\u0ea1\u0ec8\u0e99
 ERROR_InvalidRPLifetime = \u0ec4\u0ea5\u0e8d\u0eb0\u0eab\u0ec8\u0eb2\u0e87\u0e95\u0ec9\u0ead\u0e87\u0ec0\u0e9b\u0eb1\u0e99\u0e88\u0eb3\u0e99\u0ea7\u0e99\u0e96\u0ec9\u0ea7\u0e99\u0e9a\u0ea7\u0e81.
 ERROR_RPExists = \u0e99\u0eb0\u0ec2\u0e8d\u0e9a\u0eb2\u0e8d "{0}"\u0ea1\u0eb5\u0ea2\u0eb9\u0ec8\u0ec1\u0ea5\u0ec9\u0ea7.
 multiple_servers = \u0eab\u0ebc\u0eb2\u0e8d\u0ec0\u0e8a\u0eb5\u0ec0\u0ea7\u0eb5
+ERROR_INVALID_FILE_NAME = \u0e8a\u0eb7\u0ec8\u0ec4\u0e9f\u0ea5\u0ecc\u0ec3\u0e8a\u0ec9\u200b\u0e9a\u0ecd\u0ec8\u200b\u0ec4\u0e94\u0ec9. \u0ec3\u0e8a\u0ec9\u200b\u0e9b\u0eb8\u0ec8\u0ea1\u200b\u0e97\u0ec8\u0ead\u0e87\u200b\u0eab\u0eb2 \u0ec0\u0e9e\u0eb7\u0ec8\u0ead\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0ec4\u0e9f\u200b\u0ea5\u0ecc\u0e97\u0eb5\u0ec8\u0ec3\u0e8a\u0ec9\u200b\u0ec4\u0e94\u0ec9.
