--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -887,11 +887,10 @@ NAD_MTA_RelayPort = Porta do MTA de transfer\u00eancia:
 NAD_MTA_MaxMsgSize = Tamanho m\u00e1ximo da mensagem (KB):
 NAD_DOC_MaxUploadSize = Tamanho m\u00e1ximo de um arquivo carregado a partir do desktop (KB):
 NAD_MTA_Options = Op\u00e7\u00f5es:
-NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = Ativada
+NAD_MTA_SMTP_Dns = DNS SMTP:
+NAD_MTA_SMTP_Dns_Enabled = Ativado
 NAD_MTA_SMTP_Dns_Disabled = Desativado
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Ativar consultas ao DNS
 NAD_MTA_ProtocolChecks = Verifica\u00e7\u00f5es do protocolo
 NAD_MTA_reject_invalid_helo_hostname = O nome do host na sauda\u00e7\u00e3o viola a RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = O cliente precisa realizar a sauda\u00e7\u00e3o com um nome de host totalmente qualificado (reject_non_fqdn_helo_hostname)
@@ -1214,7 +1213,6 @@ NAD_MailOptions = Op\u00e7\u00f5es de e-mail
 NAD_MailOptionsStandardClient = Cliente padr\u00e3o (HTML)
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contatos
 NAD_CalendarOptions = Op\u00e7\u00f5es da agenda
-NAD_ChatOptions = Op\u00e7\u00f5es de bate-papo
 NAD_MailOptionsSending = Envio de e-mails
 NAD_MailOptionsReceiving = Recebimento de e-mails
 NAD_MailOptionsComposing = Composi\u00e7\u00e3o de e-mails
@@ -1348,14 +1346,11 @@ NAD_zimbraGeneralFeature = Recursos gerais
 NAD_zimbraMailFeature = Recursos de e-mail
 NAD_zimbraContactFeature = Recursos de contato
 NAD_zimbraCalendarFeature = Recursos de agenda
-NAD_zimbraChatFeature = Recursos de MI
 NAD_zimbraSearchFeature = Recursos de busca
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-arquivos
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureChatEnabled = Bate-papo
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
-LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visualizando anexos como HTML
 LBL_zimbraFeatureGalEnabled = Acesso \u00e0 Lista de endere\u00e7os globais
@@ -1477,7 +1472,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Mostrar a lista de fusos hor\u00e1rios
 LBL_zimbraPrefImapSearchFoldersEnabled = Exibir as pastas da busca IMAP
 LBL_zimbraPrefMailForwardingAddress = Endere\u00e7os de encaminhamento especificados pelo usu\u00e1rio:
 LBL_zimbraPrefMailForwardingAddressMsg = Endere\u00e7os de encaminhamento especificados pelo usu\u00e1rio
-LBL_zimbraPrefChatPlaySound = Reproduzir som de notifica\u00e7\u00e3o
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Pelo menos um endere\u00e7o de encaminhamento deve ser especificado quando escolher n\u00e3o manter c\u00f3pias locais de mensagens.
 
@@ -2678,3 +2672,4 @@ ERROR_RPNameCustomDisallowed = O nome "{0}" \u00e9 um nome de pol\u00edtica de r
 ERROR_InvalidRPLifetime = O intervalo deve ser um n\u00famero inteiro positivo.
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
+ERROR_INVALID_FILE_NAME = Nome de arquivo inv\u00e1lido. Use o bot\u00e3o procurar para selecionar um arquivo v\u00e1lido.
