--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -889,10 +889,9 @@ NAD_MTA_MaxMsgSize = Maximal meddelandestorlek (kB):
 NAD_DOC_MaxUploadSize = Maximal storlek p\u00e5 en fil som \u00f6verf\u00f6rs fr\u00e5n skrivbordet (kB):
 NAD_MTA_Options = Alternativ:
 NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = Aktiverat
-NAD_MTA_SMTP_Dns_Disabled = Inaktiverat
+NAD_MTA_SMTP_Dns_Enabled = Aktiverad
+NAD_MTA_SMTP_Dns_Disabled = Inaktiverad
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = Aktivera DNS-s\u00f6kningar
 NAD_MTA_ProtocolChecks = Protokollkontroller
 NAD_MTA_reject_invalid_helo_hostname = V\u00e4rdnamnet i h\u00e4lsningen bryter mot RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = Klienten m\u00e5ste skicka en h\u00e4lsning med ett fullst\u00e4ndigt kvalificerat v\u00e4rdnamn (reject_non_fqdn_helo_hostname)
@@ -1215,7 +1214,6 @@ NAD_MailOptions = E-postalternativ
 NAD_MailOptionsStandardClient = Standard (HTML)-klient
 NAD_ContactsOptions = Alternativ f\u00f6r kontakter
 NAD_CalendarOptions = Alternativ f\u00f6r kalender
-NAD_ChatOptions = Chattalternativ
 NAD_MailOptionsSending = Skicka e-post
 NAD_MailOptionsReceiving = Ta emot e-post
 NAD_MailOptionsComposing = Skriva e-post
@@ -1349,14 +1347,11 @@ NAD_zimbraGeneralFeature = Allm\u00e4nna funktioner
 NAD_zimbraMailFeature = E-postfunktioner
 NAD_zimbraContactFeature = Kontaktfunktioner
 NAD_zimbraCalendarFeature = Kalenderfunktioner
-NAD_zimbraChatFeature = Snabbmeddelandefunktioner
 NAD_zimbraSearchFeature = S\u00f6kfunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokument
 LBL_zimbraFeatureBriefcasesEnabled = Portf\u00f6lj
 LBL_zimbraFeatureHtmlComposeEnabled = Skriv HTML
-LBL_zimbraFeatureChatEnabled = Chatt
 LBL_zimbraFeatureInstantNotify = Snabbmeddelanden
-LBL_zimbraPrefIMAutoLogin = Logga in p\u00e5 snabbmeddelandetj\u00e4nster automatiskt
 NAD_Feature = Funktion: 
 LBL_zimbraFeatureViewInHtmlEnabled = Visa bilagor som HTML
 LBL_zimbraFeatureGalEnabled = \u00c5tkomst till global adresslista
@@ -1478,7 +1473,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Visa lista med tidszoner i m\u00f6tesv
 LBL_zimbraPrefImapSearchFoldersEnabled = Visa mappar f\u00f6r IMAP-s\u00f6kning
 LBL_zimbraPrefMailForwardingAddress = Anv\u00e4ndarspecifik adress f\u00f6r vidarebefordran:
 LBL_zimbraPrefMailForwardingAddressMsg = Anv\u00e4ndarspecifika adresser f\u00f6r vidarebefordran
-LBL_zimbraPrefChatPlaySound = Spela upp meddelandeljud
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mins en adress f\u00f6r vidarebefordran m\u00e5ste anges om du v\u00e4ljer att inte bevara lokala kopior av meddelanden.
 
@@ -2679,3 +2673,4 @@ ERROR_RPNameCustomDisallowed = Namnet "{0}" \u00e4r ett reserverat lagringsprinc
 ERROR_InvalidRPLifetime = Intervallet m\u00e5ste best\u00e5 av ett positivt heltal.
 ERROR_RPExists = Principen "{0}" finns redan.
 multiple_servers = flera servrar
+ERROR_INVALID_FILE_NAME = Ogiltigt filnamn. V\u00e4lj en giltig fil med bl\u00e4ddringsknappen.
