--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -914,10 +914,9 @@ NAD_MTA_MaxMsgSize = \u0e02\u0e19\u0e32\u0e14\u0e2a\u0e39\u0e07\u0e2a\u0e38\u0e1
 NAD_DOC_MaxUploadSize = \u0e02\u0e19\u0e32\u0e14\u0e44\u0e1f\u0e25\u0e4c\u0e2a\u0e39\u0e07\u0e2a\u0e38\u0e14\u0e17\u0e35\u0e48\u0e2d\u0e31\u0e1e\u0e42\u0e2b\u0e25\u0e14\u0e08\u0e32\u0e01\u0e40\u0e14\u0e2a\u0e01\u0e4c\u0e17\u0e47\u0e2d\u0e1b (KB):
 NAD_MTA_Options = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01:
 NAD_MTA_SMTP_Dns = SMTP DNS:
-NAD_MTA_SMTP_Dns_Enabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19
+NAD_MTA_SMTP_Dns_Enabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e41\u0e25\u0e49\u0e27
 NAD_MTA_SMTP_Dns_Disabled = \u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e41\u0e25\u0e49\u0e27
 NAD_MTA_SMTP_Dns_Dnssec = DNSSEC
-NAD_MTA_DnsLookups = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e01\u0e32\u0e23\u0e04\u0e49\u0e19\u0e2b\u0e32 DNS
 NAD_MTA_ProtocolChecks = \u0e01\u0e32\u0e23\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e42\u0e1b\u0e23\u0e42\u0e15\u0e04\u0e2d\u0e25
 NAD_MTA_reject_invalid_helo_hostname = \u0e0a\u0e37\u0e48\u0e2d\u0e42\u0e2e\u0e2a\u0e15\u0e4c\u0e43\u0e19\u0e01\u0e32\u0e23\u0e17\u0e31\u0e01\u0e17\u0e32\u0e22\u0e25\u0e30\u0e40\u0e21\u0e34\u0e14 RFC (reject_invalid_helo_hostname)
 NAD_MTA_reject_non_fqdn_helo_hostname = \u0e44\u0e04\u0e25\u0e40\u0e2d\u0e47\u0e19\u0e15\u0e4c\u0e15\u0e49\u0e2d\u0e07\u0e17\u0e31\u0e01\u0e17\u0e32\u0e22\u0e42\u0e14\u0e22\u0e43\u0e0a\u0e49\u0e0a\u0e37\u0e48\u0e2d\u0e42\u0e2e\u0e2a\u0e15\u0e4c\u0e41\u0e1a\u0e1a\u0e40\u0e15\u0e47\u0e21 (reject_non_fqdn_helo_hostname)
@@ -1240,7 +1239,6 @@ NAD_MailOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e08\u0e14\u
 NAD_MailOptionsStandardClient = \u0e44\u0e04\u0e25\u0e40\u0e2d\u0e47\u0e19\u0e15\u0e4c\u0e21\u0e32\u0e15\u0e23\u0e10\u0e32\u0e19 (HTML)
 NAD_ContactsOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d
 NAD_CalendarOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e1b\u0e0f\u0e34\u0e17\u0e34\u0e19
-NAD_ChatOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e41\u0e0a\u0e17
 NAD_MailOptionsSending = \u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 NAD_MailOptionsReceiving = \u0e01\u0e32\u0e23\u0e23\u0e31\u0e1a\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 NAD_MailOptionsComposing = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e35\u0e22\u0e19\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
@@ -1374,14 +1372,11 @@ NAD_zimbraGeneralFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e3
 NAD_zimbraMailFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 NAD_zimbraContactFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d
 NAD_zimbraCalendarFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e1b\u0e0f\u0e34\u0e17\u0e34\u0e19
-NAD_zimbraChatFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30 IM
 NAD_zimbraSearchFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e01\u0e32\u0e23\u0e04\u0e49\u0e19\u0e2b\u0e32
 LBL_zimbraFeatureNotebookEnabled = \u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23
 LBL_zimbraFeatureBriefcasesEnabled = \u0e01\u0e23\u0e30\u0e40\u0e1b\u0e4b\u0e32\u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23
 LBL_zimbraFeatureHtmlComposeEnabled = \u0e40\u0e02\u0e35\u0e22\u0e19 HTML
-LBL_zimbraFeatureChatEnabled = \u0e41\u0e0a\u0e17
 LBL_zimbraFeatureInstantNotify = \u0e01\u0e32\u0e23\u0e41\u0e08\u0e49\u0e07\u0e43\u0e2b\u0e49\u0e17\u0e23\u0e32\u0e1a\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35
-LBL_zimbraPrefIMAutoLogin = \u0e40\u0e02\u0e49\u0e32\u0e2a\u0e39\u0e48\u0e23\u0e30\u0e1a\u0e1a\u0e02\u0e2d\u0e07\u0e1a\u0e23\u0e34\u0e01\u0e32\u0e23\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35\u0e42\u0e14\u0e22\u0e2d\u0e31\u0e15\u0e42\u0e19\u0e21\u0e31\u0e15\u0e34
 NAD_Feature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30: 
 LBL_zimbraFeatureViewInHtmlEnabled = \u0e01\u0e32\u0e23\u0e14\u0e39\u0e2a\u0e34\u0e48\u0e07\u0e17\u0e35\u0e48\u0e41\u0e19\u0e1a\u0e41\u0e1a\u0e1a HTML
 LBL_zimbraFeatureGalEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e43\u0e19\u0e2a\u0e21\u0e38\u0e14\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e2a\u0e48\u0e27\u0e19\u0e01\u0e25\u0e32\u0e07
@@ -1503,7 +1498,6 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u0e41\u0e2a\u0e14\u0e07\u0e23\u0e32\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u0e41\u0e2a\u0e14\u0e07\u0e42\u0e1f\u0e25\u0e40\u0e14\u0e2d\u0e23\u0e4c\u0e01\u0e32\u0e23\u0e04\u0e49\u0e19\u0e2b\u0e32 IMAP
 LBL_zimbraPrefMailForwardingAddress = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e43\u0e19\u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d\u0e17\u0e35\u0e48\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e23\u0e30\u0e1a\u0e38:
 LBL_zimbraPrefMailForwardingAddressMsg = \u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e43\u0e19\u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d\u0e17\u0e35\u0e48\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e23\u0e30\u0e1a\u0e38
-LBL_zimbraPrefChatPlaySound = \u0e40\u0e25\u0e48\u0e19\u0e40\u0e2a\u0e35\u0e22\u0e07\u0e01\u0e32\u0e23\u0e41\u0e08\u0e49\u0e07\u0e40\u0e15\u0e37\u0e2d\u0e19
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u0e08\u0e30\u0e15\u0e49\u0e2d\u0e07\u0e23\u0e30\u0e1a\u0e38\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d\u0e2d\u0e22\u0e48\u0e32\u0e07\u0e19\u0e49\u0e2d\u0e22\u0e2b\u0e19\u0e36\u0e48\u0e07\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e40\u0e21\u0e37\u0e48\u0e2d\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e17\u0e35\u0e48\u0e08\u0e30\u0e44\u0e21\u0e48\u0e40\u0e01\u0e47\u0e1a\u0e2a\u0e33\u0e40\u0e19\u0e32\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e44\u0e27\u0e49\u0e43\u0e19\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07
 
@@ -2777,3 +2771,4 @@ ERROR_RPNameCustomDisallowed = \u0e0a\u0e37\u0e48\u0e2d "{0}" \u0e40\u0e1b\u0e47
 ERROR_InvalidRPLifetime = \u0e0a\u0e48\u0e27\u0e07\u0e15\u0e49\u0e2d\u0e07\u0e40\u0e1b\u0e47\u0e19\u0e08\u0e33\u0e19\u0e27\u0e19\u0e40\u0e15\u0e47\u0e21\u0e1a\u0e27\u0e01
 ERROR_RPExists = \u0e19\u0e42\u0e22\u0e1a\u0e32\u0e22 "{0}" \u0e21\u0e35\u0e2d\u0e22\u0e39\u0e48\u0e41\u0e25\u0e49\u0e27
 multiple_servers = \u0e2b\u0e25\u0e32\u0e22\u0e40\u0e0b\u0e34\u0e23\u0e4c\u0e1f\u0e40\u0e27\u0e2d\u0e23\u0e4c
+ERROR_INVALID_FILE_NAME = \u0e0a\u0e37\u0e48\u0e2d\u0e44\u0e1f\u0e25\u0e4c\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07 \u0e43\u0e0a\u0e49\u0e1b\u0e38\u0e48\u0e21 \u0e40\u0e23\u0e35\u0e22\u0e01\u0e14\u0e39 \u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07
